--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api`)": "(p. ex. `sh webui.sh --api`)",
 	"(latest)": "(últim)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô-đun }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở.",
 	"{{modelName}} is thinking...": "{{modelName}} està pensant...",
 	"{{user}}'s Chats": "{{user}}'s Chats",
 	"{{webUIName}} Backend Required": "Es requereix Backend de {{webUIName}}",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "un usuari",
 	"About": "Sobre",
 	"Account": "Compte",
 	"Accurate information": "Informació precisa",
 	"Add": "Afegir",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "Afegeix un títol curt per aquest prompt",
 	"Add a tag": "Afegeix una etiqueta",
 	"Add custom prompt": "Afegir un prompt personalitzat",
@@ -31,7 +31,7 @@
 	"Admin Panel": "Panell d'Administració",
 	"Admin Settings": "Configuració d'Administració",
 	"Advanced Parameters": "Paràmetres Avançats",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "tots",
 	"All Documents": "Tots els Documents",
 	"All Users": "Tots els Usuaris",
@@ -48,7 +48,7 @@
 	"API keys": "Claus de l'API",
 	"April": "Abril",
 	"Archive": "Arxiu",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả các cuộc trò chuyện đều được lưu trữ.",
 	"Archived Chats": "Arxiu d'historial de xat",
 	"are allowed - Activate this command by typing": "estan permesos - Activa aquesta comanda escrivint",
 	"Are you sure?": "Estàs segur?",
@@ -63,14 +63,14 @@
 	"available!": "disponible!",
 	"Back": "Enrere",
 	"Bad Response": "Resposta Erroni",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "abans",
 	"Being lazy": "Ser l'estupidez",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Desactivar la verificació SSL per a l'accés a l'Internet",
 	"Cancel": "Cancel·la",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "Canvia la Contrasenya",
 	"Chat": "Xat",
 	"Chat Bubble UI": "Chat Bubble UI",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Fes clic aquí per seleccionar documents.",
 	"click here.": "fes clic aquí.",
 	"Click on the user role button to change a user's role.": "Fes clic al botó de rol d'usuari per canviar el rol d'un usuari.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Tanca",
 	"Collection": "Col·lecció",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "URL base de ComfyUI",
 	"ComfyUI Base URL is required.": "URL base de ComfyUI és obligatòria.",
 	"Command": "Comanda",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Confirma la Contrasenya",
 	"Connections": "Connexions",
 	"Content": "Contingut",
@@ -114,7 +114,7 @@
 	"Copy Link": "Copiar l'enllaç",
 	"Copying to clipboard was successful!": "La còpia al porta-retalls ha estat exitosa!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Crea una frase concisa de 3-5 paraules com a capçalera per a la següent consulta, seguint estrictament el límit de 3-5 paraules i evitant l'ús de la paraula 'títol':",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "Crea un Compte",
 	"Create new key": "Crea una nova clau",
 	"Create new secret key": "Crea una nova clau secreta",
@@ -123,7 +123,7 @@
 	"Current Model": "Model Actual",
 	"Current Password": "Contrasenya Actual",
 	"Custom": "Personalitzat",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình để phục vụ một mục đích cụ thể.",
 	"Dark": "Fosc",
 	"Database": "Base de Dades",
 	"December": "Desembre",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "Per defecte (Automatic1111)",
 	"Default (SentenceTransformers)": "Per defecte (SentenceTransformers)",
 	"Default (Web API)": "Per defecte (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "Model per defecte actualitzat",
 	"Default Prompt Suggestions": "Suggeriments de Prompt Per Defecte",
 	"Default User Role": "Rol d'Usuari Per Defecte",
 	"delete": "esborra",
 	"Delete": "Esborra",
 	"Delete a model": "Esborra un model",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Esborra xat",
 	"Delete Chat": "Esborra Xat",
 	"delete this link": "Esborra aquest enllaç",
 	"Delete User": "Esborra Usuari",
 	"Deleted {{deleteModelTag}}": "Esborrat {{deleteModelTag}}",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Đã xóa {{name}}",
 	"Description": "Descripció",
 	"Didn't fully follow instructions": "No s'ha completat els instruccions",
 	"Disabled": "Desactivat",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "Descobreix un prompt",
 	"Discover, download, and explore custom prompts": "Descobreix, descarrega i explora prompts personalitzats",
 	"Discover, download, and explore model presets": "Descobreix, descarrega i explora presets de models",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Motor de model d'embutiment",
 	"Embedding model set to \"{{embedding_model}}\"": "Model d'embutiment configurat a \"{{embedding_model}}\"",
 	"Enable Chat History": "Activa Historial de Xat",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Permet Noves Inscripcions",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Activat",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Assegura't que el fitxer CSV inclou 4 columnes en aquest ordre: Nom, Correu Electrònic, Contrasenya, Rol.",
 	"Enter {{role}} message here": "Introdueix aquí el missatge de {{role}}",
 	"Enter a detail about yourself for your LLMs to recall": "Introdueix un detall sobre tu per que els LLMs puguin recordar-te",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Introdueix el Solapament de Blocs",
 	"Enter Chunk Size": "Introdueix la Mida del Bloc",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập mã API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id",
 	"Enter Image Size (e.g. 512x512)": "Introdueix la Mida de la Imatge (p. ex. 512x512)",
 	"Enter language codes": "Introdueix els codis de llenguatge",
 	"Enter model tag (e.g. {{modelTag}})": "Introdueix l'etiqueta del model (p. ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Introdueix el Nombre de Passos (p. ex. 50)",
 	"Enter Score": "Introdueix el Puntuació",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Introdueix la seqüència de parada",
 	"Enter Top K": "Introdueix Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Introdueix l'URL (p. ex. http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "Introdueix el Teu Nom Complet",
 	"Enter Your Password": "Introdueix la Teva Contrasenya",
 	"Enter Your Role": "Introdueix el Teu Ròl",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Experimental",
 	"Export All Chats (All Users)": "Exporta Tots els Xats (Tots els Usuaris)",
 	"Export Chats": "Exporta Xats",
 	"Export Documents Mapping": "Exporta el Mapatge de Documents",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "Exporta Prompts",
 	"Failed to create API Key.": "No s'ha pogut crear la clau d'API.",
 	"Failed to read clipboard contents": "No s'ha pogut llegir el contingut del porta-retalls",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Enfoca l'entrada del xat",
 	"Followed instructions perfectly": "Siguiu les instruccions perfeicte",
 	"Format your variables using square brackets like this:": "Formata les teves variables utilitzant claudàtors així:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "Mode de Pantalla Completa",
 	"General": "General",
 	"General Settings": "Configuració General",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Informació de Generació",
 	"Good Response": "Resposta bona",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Mã API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "no té converses.",
 	"Hello, {{name}}": "Hola, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "Imatges",
 	"Import Chats": "Importa Xats",
 	"Import Documents Mapping": "Importa el Mapa de Documents",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "Importa Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclou la bandera `--api` quan executis stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Entra ordres",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Interfície",
 	"Invalid Tag": "Etiqueta Inválida",
 	"January": "Gener",
 	"join our Discord for help.": "uneix-te al nostre Discord per ajuda.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "Juliol",
 	"June": "Juny",
 	"JWT Expiration": "Expiració de JWT",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "Assegura't d'envoltar-los amb",
 	"Manage Models": "Gestiona Models",
 	"Manage Ollama Models": "Gestiona Models Ollama",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "Març",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Es poden descarregar un màxim de 3 models simultàniament. Si us plau, prova-ho més tard.",
 	"May": "Maig",
 	"Memories accessible by LLMs will be shown here.": "Els memòries accessible per a LLMs es mostraran aquí.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "El model '{{modelName}}' s'ha descarregat amb èxit.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "El model '{{modelTag}}' ja està en cua per ser descarregat.",
 	"Model {{modelId}} not found": "Model {{modelId}} no trobat",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Modelo {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "S'ha detectat el camí del sistema de fitxers del model. És necessari un nom curt del model per a actualitzar, no es pot continuar.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "Model no seleccionat",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "Llista Blanca de Models",
 	"Model(s) Whitelisted": "Model(s) a la Llista Blanca",
 	"Modelfile Content": "Contingut del Fitxer de Model",
@@ -300,13 +300,13 @@
 	"More": "Més",
 	"Name": "Nom",
 	"Name Tag": "Etiqueta de Nom",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "Xat Nou",
 	"New Password": "Nova Contrasenya",
 	"No results found": "No s'han trobat resultats",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "Sense font disponible",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "No està clarament correcte",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Nota: Si establiscs una puntuació mínima, la cerca només retornarà documents amb una puntuació major o igual a la puntuació mínima.",
 	"Notifications": "Notificacions d'Escriptori",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "D'acord, Anem!",
 	"OLED Dark": "OLED Fosc",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Versió d'Ollama",
 	"On": "Activat",
 	"Only": "Només",
@@ -341,8 +341,8 @@
 	"pending": "pendent",
 	"Permission denied when accessing microphone: {{error}}": "Permís denegat en accedir al micròfon: {{error}}",
 	"Personalization": "Personalització",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Công tắc đường bộ",
 	"Plain text (.txt)": "Text pla (.txt)",
 	"Playground": "Zona de Jocs",
 	"Positive attitude": "Attitudin positiva",
@@ -387,33 +387,33 @@
 	"Scan for documents from {{path}}": "Escaneja documents des de {{path}}",
 	"Search": "Cerca",
 	"Search a model": "Cerca un model",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "Cerca Documents",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Cerca Prompts",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_many": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_many": "Tìm kiếm trên {{count}} trang web_many",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Consulta el readme.md per a instruccions",
 	"See what's new": "Veure novetats",
 	"Seed": "Llavor",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "Selecciona un mode",
 	"Select a model": "Selecciona un model",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường dẫn pipline",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Selecciona una instància d'Ollama",
 	"Select model": "Selecciona un model",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "Envia",
 	"Send a Message": "Envia un Missatge",
 	"Send message": "Envia missatge",
 	"September": "Setembre",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Connexió al servidor verificada",
 	"Set as default": "Estableix com a predeterminat",
 	"Set Default Model": "Estableix Model Predeterminat",
@@ -422,7 +422,7 @@
 	"Set Model": "Estableix Model",
 	"Set reranking model (e.g. {{model}})": "Estableix el model de reranking (p.ex. {{model}})",
 	"Set Steps": "Estableix Passos",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "Estableix Veu",
 	"Settings": "Configuracions",
 	"Settings saved successfully!": "Configuracions guardades amb èxit!",
@@ -481,14 +481,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "Problemes accedint a Ollama?",
 	"TTS Settings": "Configuracions TTS",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Escriu URL de Resolució (Descàrrega) de Hugging Face",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uf! Hi va haver un problema connectant-se a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipus d'Arxiu Desconegut '{{file_type}}', però acceptant i tractant com a text pla",
 	"Update and Copy Link": "Actualitza i Copia enllaç",
 	"Update password": "Actualitza contrasenya",
 	"Upload a GGUF model": "Puja un model GGUF",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "Progrés de Càrrega",
 	"URL Mode": "Mode URL",
 	"Use '#' in the prompt input to load and select your documents.": "Utilitza '#' a l'entrada del prompt per carregar i seleccionar els teus documents.",
@@ -502,13 +502,13 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable per tenir-les reemplaçades amb el contingut del porta-retalls.",
 	"Version": "Versió",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avís: Si actualitzeu o canvieu el model d'incrustació, haureu de tornar a importar tots els documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Configuració del carregador web",
 	"Web Params": "Paràmetres web",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "URL del webhook",
 	"WebUI Add-ons": "Complements de WebUI",
 	"WebUI Settings": "Configuració de WebUI",
@@ -521,7 +521,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escriu un resum en 50 paraules que resumeixi [tema o paraula clau].",
 	"Yesterday": "Ayer",
 	"You": "Tu",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "No tens converses arxivades.",
 	"You have shared this chat": "Has compartit aquest xat",
 	"You're a helpful assistant.": "Ets un assistent útil.",
