--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api`)": "(p.ej. `sh webui.sh --api`)",
 	"(latest)": "(latest)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô hình }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở",
 	"{{modelName}} is thinking...": "{{modelName}} está pensando...",
 	"{{user}}'s Chats": "{{user}}'s Chats",
 	"{{webUIName}} Backend Required": "{{webUIName}} Servidor Requerido",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "un usuario",
 	"About": "Sobre nosotros",
 	"Account": "Cuenta",
 	"Accurate information": "Información precisa",
 	"Add": "Agregar",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "Agregue un título corto para este Prompt",
 	"Add a tag": "Agregar una etiqueta",
 	"Add custom prompt": "Agregar un prompt personalizado",
@@ -31,7 +31,7 @@
 	"Admin Panel": "Panel de Administración",
 	"Admin Settings": "Configuración de Administrador",
 	"Advanced Parameters": "Parámetros Avanzados",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "todo",
 	"All Documents": "Todos los Documentos",
 	"All Users": "Todos los Usuarios",
@@ -48,7 +48,7 @@
 	"API keys": "Claves de la API",
 	"April": "Abril",
 	"Archive": "Archivar",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả các cuộc trò chuyện đều được lưu trữ.",
 	"Archived Chats": "Chats archivados",
 	"are allowed - Activate this command by typing": "están permitidos - Active este comando escribiendo",
 	"Are you sure?": "¿Está seguro?",
@@ -63,14 +63,14 @@
 	"available!": "¡disponible!",
 	"Back": "Volver",
 	"Bad Response": "Respuesta incorrecta",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bức tranh trang trí",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "antes",
 	"Being lazy": "Ser perezoso",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Desactivar la verificación SSL para sitios web",
 	"Cancel": "Cancelar",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "Cambia la Contraseña",
 	"Chat": "Chat",
 	"Chat Bubble UI": "Burbuja de chat UI",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Presiona aquí para seleccionar documentos",
 	"click here.": "Presiona aquí.",
 	"Click on the user role button to change a user's role.": "Presiona en el botón de roles del usuario para cambiar su rol.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Cerrar",
 	"Collection": "Colección",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI Base URL",
 	"ComfyUI Base URL is required.": "ComfyUI Base URL es requerido.",
 	"Command": "Comando",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Confirmar Contraseña",
 	"Connections": "Conexiones",
 	"Content": "Contenido",
@@ -114,7 +114,7 @@
 	"Copy Link": "Copiar enlace",
 	"Copying to clipboard was successful!": "¡La copia al portapapeles se ha realizado correctamente!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Cree una frase concisa de 3 a 5 palabras como encabezado para la siguiente consulta, respetando estrictamente el límite de 3 a 5 palabras y evitando el uso de la palabra 'título':",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "Crear una cuenta",
 	"Create new key": "Crear una nueva clave",
 	"Create new secret key": "Crear una nueva clave secreta",
@@ -123,7 +123,7 @@
 	"Current Model": "Modelo Actual",
 	"Current Password": "Contraseña Actual",
 	"Custom": "Personalizado",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình cho một mục đích cụ thể.",
 	"Dark": "Oscuro",
 	"Database": "Base de datos",
 	"December": "Diciembre",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "Por defecto (Automatic1111)",
 	"Default (SentenceTransformers)": "Por defecto (SentenceTransformers)",
 	"Default (Web API)": "Por defecto (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "El modelo por defecto ha sido actualizado",
 	"Default Prompt Suggestions": "Sugerencias de mensajes por defecto",
 	"Default User Role": "Rol por defecto para usuarios",
 	"delete": "borrar",
 	"Delete": "Borrar",
 	"Delete a model": "Borra un modelo",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Borrar chat",
 	"Delete Chat": "Borrar Chat",
 	"delete this link": "Borrar este enlace",
 	"Delete User": "Borrar Usuario",
 	"Deleted {{deleteModelTag}}": "Se borró {{deleteModelTag}}",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Xóa {{name}}",
 	"Description": "Descripción",
 	"Didn't fully follow instructions": "No siguió las instrucciones",
 	"Disabled": "Desactivado",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "Descubre un Prompt",
 	"Discover, download, and explore custom prompts": "Descubre, descarga, y explora Prompts personalizados",
 	"Discover, download, and explore model presets": "Descubre, descarga y explora ajustes preestablecidos de modelos",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Motor de Modelo de Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding configurado a \"{{embedding_model}}\"",
 	"Enable Chat History": "Activa el Historial de Chat",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Habilitar Nuevos Registros",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Activado",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Asegúrese de que su archivo CSV incluya 4 columnas en este orden: Nombre, Correo Electrónico, Contraseña, Rol.",
 	"Enter {{role}} message here": "Ingrese el mensaje {{role}} aquí",
 	"Enter a detail about yourself for your LLMs to recall": "Ingrese un detalle sobre usted para que sus LLMs recuerden",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Ingresar superposición de fragmentos",
 	"Enter Chunk Size": "Ingrese el tamaño del fragmento",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập mã API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id",
 	"Enter Image Size (e.g. 512x512)": "Ingrese el tamaño de la imagen (p.ej. 512x512)",
 	"Enter language codes": "Ingrese códigos de idioma",
 	"Enter model tag (e.g. {{modelTag}})": "Ingrese la etiqueta del modelo (p.ej. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Ingrese el número de pasos (p.ej., 50)",
 	"Enter Score": "Ingrese la puntuación",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập khóa API Serper",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Ingrese la secuencia de parada",
 	"Enter Top K": "Ingrese el Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Ingrese la URL (p.ej., http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "Ingrese su nombre completo",
 	"Enter Your Password": "Ingrese su contraseña",
 	"Enter Your Role": "Ingrese su rol",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Experimental",
 	"Export All Chats (All Users)": "Exportar todos los chats (Todos los usuarios)",
 	"Export Chats": "Exportar Chats",
 	"Export Documents Mapping": "Exportar el mapeo de documentos",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "Exportar Prompts",
 	"Failed to create API Key.": "No se pudo crear la clave API.",
 	"Failed to read clipboard contents": "No se pudo leer el contenido del portapapeles",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Enfoca la entrada del chat",
 	"Followed instructions perfectly": "Siguió las instrucciones perfectamente",
 	"Format your variables using square brackets like this:": "Formatea tus variables usando corchetes de la siguiente manera:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "Modo de Pantalla Completa",
 	"General": "General",
 	"General Settings": "Opciones Generales",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Información de Generación",
 	"Good Response": "Buena Respuesta",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "no tiene conversaciones.",
 	"Hello, {{name}}": "Hola, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "Imágenes",
 	"Import Chats": "Importar chats",
 	"Import Documents Mapping": "Importar Mapeo de Documentos",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "Importar Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Incluir el indicador `--api` al ejecutar stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Ingresar comandos",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Interfaz",
 	"Invalid Tag": "Etiqueta Inválida",
 	"January": "Enero",
 	"join our Discord for help.": "Únase a nuestro Discord para obtener ayuda.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "Julio",
 	"June": "Junio",
 	"JWT Expiration": "Expiración del JWT",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "Asegúrese de adjuntarlos con",
 	"Manage Models": "Administrar Modelos",
 	"Manage Ollama Models": "Administrar Modelos Ollama",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "Marzo",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Se pueden descargar un máximo de 3 modelos simultáneamente. Por favor, inténtelo de nuevo más tarde.",
 	"May": "Mayo",
 	"Memories accessible by LLMs will be shown here.": "Las memorias accesibles por los LLMs se mostrarán aquí.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "El modelo '{{modelName}}' se ha descargado correctamente.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "El modelo '{{modelTag}}' ya está en cola para descargar.",
 	"Model {{modelId}} not found": "El modelo {{modelId}} no fue encontrado",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Model {{modelName}} không có khả năng nhận thức hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Se detectó la ruta del sistema de archivos del modelo. Se requiere el nombre corto del modelo para la actualización, no se puede continuar.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "Modelo no seleccionado",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "Listado de Modelos habilitados",
 	"Model(s) Whitelisted": "Modelo(s) habilitados",
 	"Modelfile Content": "Contenido del Modelfile",
@@ -300,13 +300,13 @@
 	"More": "Más",
 	"Name": "Nombre",
 	"Name Tag": "Nombre de etiqueta",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "Nuevo Chat",
 	"New Password": "Nueva Contraseña",
 	"No results found": "No se han encontrado resultados",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "No hay fuente disponible",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "No es correcto en todos los aspectos",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Nota: Si estableces una puntuación mínima, la búsqueda sólo devolverá documentos con una puntuación mayor o igual a la puntuación mínima.",
 	"Notifications": "Notificaciones",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "Bien, ¡Vamos!",
 	"OLED Dark": "OLED oscuro",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Versión de Ollama",
 	"On": "Activado",
 	"Only": "Solamente",
@@ -341,8 +341,8 @@
 	"pending": "pendiente",
 	"Permission denied when accessing microphone: {{error}}": "Permiso denegado al acceder al micrófono: {{error}}",
 	"Personalization": "Personalización",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Công tắc đường bộ",
 	"Plain text (.txt)": "Texto plano (.txt)",
 	"Playground": "Patio de juegos",
 	"Positive attitude": "Actitud positiva",
@@ -387,33 +387,33 @@
 	"Scan for documents from {{path}}": "Escanear en busca de documentos desde {{path}}",
 	"Search": "Buscar",
 	"Search a model": "Buscar un modelo",
-	"Search Chats": "",
+	"Search Chats": "Tìm Kiếm Trò Chuyện",
 	"Search Documents": "Buscar Documentos",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Buscar Prompts",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_many": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm trên {{count}} trang web",
+	"Searched {{count}} sites_many": "Tìm kiếm trên {{count}} trang web_many",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Vea el readme.md para instrucciones",
 	"See what's new": "Ver las novedades",
 	"Seed": "Seed",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "Selecciona un modo",
 	"Select a model": "Selecciona un modelo",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường dẫn pipline",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Seleccione una instancia de Ollama",
 	"Select model": "Selecciona un modelo",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "Enviar",
 	"Send a Message": "Enviar un Mensaje",
 	"Send message": "Enviar Mensaje",
 	"September": "Septiembre",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Conexión del servidor verificada",
 	"Set as default": "Establecer por defecto",
 	"Set Default Model": "Establecer modelo predeterminado",
@@ -422,7 +422,7 @@
 	"Set Model": "Establecer el modelo",
 	"Set reranking model (e.g. {{model}})": "Establecer modelo de reranking (ej. {{model}})",
 	"Set Steps": "Establecer Pasos",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt mô hình nhiệm vụ",
 	"Set Voice": "Establecer la voz",
 	"Settings": "Configuración",
 	"Settings saved successfully!": "¡Configuración guardada exitosamente!",
@@ -481,14 +481,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "¿Problemas para acceder a Ollama?",
 	"TTS Settings": "Configuración de TTS",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Escriba la URL (Descarga) de Hugging Face Resolve",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "¡Uh oh! Hubo un problema al conectarse a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipo de archivo desconocido '{{file_type}}', pero se acepta y se trata como texto sin formato",
 	"Update and Copy Link": "Actualizar y copiar enlace",
 	"Update password": "Actualizar contraseña",
 	"Upload a GGUF model": "Subir un modelo GGUF",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "Progreso de carga",
 	"URL Mode": "Modo de URL",
 	"Use '#' in the prompt input to load and select your documents.": "Utilice '#' en el prompt para cargar y seleccionar sus documentos.",
@@ -502,13 +502,13 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable para reemplazarlos con el contenido del portapapeles.",
 	"Version": "Versión",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Advertencia: Si actualiza o cambia su modelo de inserción, necesitará volver a importar todos los documentos.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader Settings",
 	"Web Params": "Web Params",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên mạng Internet",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Webhook URL",
 	"WebUI Add-ons": "WebUI Add-ons",
 	"WebUI Settings": "Configuración del WebUI",
@@ -521,7 +521,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escribe un resumen en 50 palabras que resuma [tema o palabra clave].",
 	"Yesterday": "Ayer",
 	"You": "Usted",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "No tiene conversaciones archivadas.",
 	"You have shared this chat": "Usted ha compartido esta conversación",
 	"You're a helpful assistant.": "Usted es un asistente útil.",
