--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -8,7 +8,7 @@
 	"{{modelName}} is thinking...": "{{modelName}} réfléchit...",
 	"{{user}}'s Chats": "Chats de {{user}}",
 	"{{webUIName}} Backend Required": "Backend {{webUIName}} requis",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "un utilisateur",
 	"About": "À Propos",
 	"Account": "Compte",
@@ -48,7 +48,7 @@
 	"API keys": "Clés API",
 	"April": "Avril",
 	"Archive": "Archiver",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả các cuộc trò chuyện đều được lưu trữ.",
 	"Archived Chats": "Chats Archivés",
 	"are allowed - Activate this command by typing": "sont autorisés - Activez cette commande en tapant",
 	"Are you sure?": "Êtes-vous sûr ?",
@@ -63,11 +63,11 @@
 	"available!": "disponible !",
 	"Back": "Retour",
 	"Bad Response": "Mauvaise Réponse",
-	"Banners": "",
+	"Banners": "Bannhiers",
 	"Base Model (From)": "Modèle de Base (De)",
 	"before": "avant",
 	"Being lazy": "Est paresseux",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Contourner la vérification SSL pour les sites Web.",
 	"Cancel": "Annuler",
 	"Capabilities": "Capacités",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Cliquez ici pour sélectionner des documents.",
 	"click here.": "cliquez ici.",
 	"Click on the user role button to change a user's role.": "Cliquez sur le bouton de rôle d'utilisateur pour changer le rôle d'un utilisateur.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Fermer",
 	"Collection": "Collection",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "URL de base ComfyUI",
 	"ComfyUI Base URL is required.": "L'URL de base ComfyUI est requise.",
 	"Command": "Commande",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Confirmer le mot de passe",
 	"Connections": "Connexions",
 	"Content": "Contenu",
@@ -131,14 +131,14 @@
 	"Default (Automatic1111)": "Par défaut (Automatic1111)",
 	"Default (SentenceTransformers)": "Par défaut (SentenceTransformers)",
 	"Default (Web API)": "Par défaut (API Web)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "Modèle par défaut mis à jour",
 	"Default Prompt Suggestions": "Suggestions de prompt par défaut",
 	"Default User Role": "Rôle d'utilisateur par défaut",
 	"delete": "supprimer",
 	"Delete": "Supprimer",
 	"Delete a model": "Supprimer un modèle",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Supprimer le chat",
 	"Delete Chat": "Supprimer le Chat",
 	"delete this link": "supprimer ce lien",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Moteur du Modèle d'Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'embedding défini sur \"{{embedding_model}}\"",
 	"Enable Chat History": "Activer l'historique du chat",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Activer les nouvelles inscriptions",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Activé",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Vérifiez que le fichier CSV contienne 4 colonnes dans cet ordre : Name (Nom), Email, Password (Mot de passe), Role (Rôle).",
 	"Enter {{role}} message here": "Entrez le message {{role}} ici",
 	"Enter a detail about yourself for your LLMs to recall": "Saisissez une donnée vous concernant pour que vos LLMs s'en souviennent",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Entrez le chevauchement de bloc",
 	"Enter Chunk Size": "Entrez la taille du bloc",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập khóa API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "Entrez la taille de l'image (p. ex. 512x512)",
 	"Enter language codes": "Entrez les codes du language",
 	"Enter model tag (e.g. {{modelTag}})": "Entrez le tag du modèle (p. ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Entrez le nombre d'étapes (p. ex. 50)",
 	"Enter Score": "Entrez le Score",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Entrez la séquence de fin",
 	"Enter Top K": "Entrez Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Entrez l'URL (p. ex. http://127.0.0.1:7860/)",
@@ -202,7 +202,7 @@
 	"Enter Your Full Name": "Entrez Votre Nom Complet",
 	"Enter Your Password": "Entrez Votre Mot De Passe",
 	"Enter Your Role": "Entrez Votre Rôle",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Expérimental",
 	"Export All Chats (All Users)": "Exporter Tous les Chats (Tous les Utilisateurs)",
 	"Export Chats": "Exporter les Chats",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Concentrer sur l'entrée du chat",
 	"Followed instructions perfectly": "A suivi les instructions parfaitement",
 	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme ceci :",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "Mode plein écran",
 	"General": "Général",
 	"General Settings": "Paramètres Généraux",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Informations de la Génération",
 	"Good Response": "Bonne Réponse",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "n'a pas de conversations.",
 	"Hello, {{name}}": "Bonjour, {{name}}",
@@ -245,9 +245,9 @@
 	"Import Models": "Importer des Modèles",
 	"Import Prompts": "Importer des Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclure le drapeau `--api` lors de l'exécution de stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Entrez les commandes d'entrée",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Interface",
 	"Invalid Tag": "Tag Invalide",
 	"January": "Janvier",
@@ -270,7 +270,7 @@
 	"Make sure to enclose them with": "Assurez-vous de les entourer avec",
 	"Manage Models": "Gérer les modèles",
 	"Manage Ollama Models": "Gérer les modèles Ollama",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý Pipelines",
 	"March": "Mars",
 	"Max Tokens (num_predict)": "Tokens maximaux (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Un maximum de 3 modèles peut être téléchargé simultanément. Veuillez réessayer plus tard.",
@@ -288,7 +288,7 @@
 	"Model '{{modelTag}}' is already in queue for downloading.": "Le modèle '{{modelTag}}' est déjà dans la file d'attente pour le téléchargement.",
 	"Model {{modelId}} not found": "Modèle {{modelId}} non trouvé",
 	"Model {{modelName}} is not vision capable": "Modèle {{modelName}} n'est pas capable de voir",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Chemin du système de fichier du modèle détecté. Le nom court du modèle est requis pour la mise à jour, ne peut pas continuer.",
 	"Model ID": "ID du Modèle",
 	"Model not selected": "Modèle non sélectionné",
@@ -304,9 +304,9 @@
 	"New Chat": "Nouveau chat",
 	"New Password": "Nouveau mot de passe",
 	"No results found": "Aucun résultat",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "Aucune source disponible",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "Faits incorrects",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Note : Si vous définissez un score minimum, la recherche ne renverra que les documents ayant un score supérieur ou égal au score minimum.",
 	"Notifications": "Notifications de bureau",
@@ -341,8 +341,8 @@
 	"pending": "en attente",
 	"Permission denied when accessing microphone: {{error}}": "Permission refusée lors de l'accès au microphone : {{error}}",
 	"Personalization": "Personnalisation",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Hậu trình",
+	"Pipelines Valves": "Nhập Quán Valves",
 	"Plain text (.txt)": "Texte Brute (.txt)",
 	"Playground": "Aire de jeu",
 	"Positive attitude": "Attitude Positive",
@@ -387,24 +387,24 @@
 	"Scan for documents from {{path}}": "Scanner des documents depuis {{path}}",
 	"Search": "Recherche",
 	"Search a model": "Rechercher un modèle",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "Rechercher des Documents",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Rechercher des Prompts",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_many": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm trên {{count}} trang web",
+	"Searched {{count}} sites_many": "Tìm kiếm trên {{count}} trang web_many",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Voir readme.md pour les instructions",
 	"See what's new": "Voir les nouveautés",
 	"Seed": "Graine",
 	"Select a base model": "Sélectionner un modèle de base",
 	"Select a mode": "Sélectionner un mode",
 	"Select a model": "Sélectionner un modèle",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường ống (pipeline)",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Sélectionner une instance Ollama",
 	"Select model": "Sélectionner un modèle",
 	"Selected model(s) do not support image inputs": "Modèle(s) séléctionés ne supportent pas les entrées images",
@@ -412,8 +412,8 @@
 	"Send a Message": "Envoyer un message",
 	"Send message": "Envoyer un message",
 	"September": "Septembre",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Connexion au serveur vérifiée",
 	"Set as default": "Définir par défaut",
 	"Set Default Model": "Définir le Modèle par Défaut",
@@ -422,7 +422,7 @@
 	"Set Model": "Définir le Modèle",
 	"Set reranking model (e.g. {{model}})": "Définir le modèle de reclassement (p. ex. {{model}})",
 	"Set Steps": "Définir les Étapes",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "Définir la Voix",
 	"Settings": "Paramètres",
 	"Settings saved successfully!": "Paramètres enregistrés avec succès !",
@@ -481,14 +481,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "Problèmes d'accès à Ollama ?",
 	"TTS Settings": "Paramètres TTS",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Entrez l'URL de Résolution (Téléchargement) Hugging Face",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh ! Il y a eu un problème de connexion à {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Type de Fichier Inconnu '{{file_type}}', mais accepté et traité comme du texte brut",
 	"Update and Copy Link": "Mettre à Jour et Copier le Lien",
 	"Update password": "Mettre à Jour le Mot de Passe",
 	"Upload a GGUF model": "Téléverser un modèle GGUF",
-	"Upload Files": "",
+	"Upload Files": "Tải tệp lên",
 	"Upload Progress": "Progression du Téléversement",
 	"URL Mode": "Mode URL",
 	"Use '#' in the prompt input to load and select your documents.": "Utilisez '#' dans l'entrée du prompt pour charger et sélectionner vos documents.",
@@ -502,13 +502,13 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable pour les remplacer par le contenu du presse-papiers.",
 	"Version": "Version",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avertissement : Si vous mettez à jour ou modifier votre modèle d'embedding, vous devrez réimporter tous les documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Paramètres du Chargeur Web",
 	"Web Params": "Paramètres Web",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên mạng Internet",
+	"Web Search Engine": "Máy Tính Tìm Kiếm Trang Web",
 	"Webhook URL": "URL du Webhook",
 	"WebUI Add-ons": "Add-ons WebUI",
 	"WebUI Settings": "Paramètres WebUI",
