--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(בטא)",
 	"(e.g. `sh webui.sh --api`)": "(למשל `sh webui.sh --api`)",
 	"(latest)": "(האחרון)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô-đun }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở",
 	"{{modelName}} is thinking...": "{{modelName}} חושב...",
 	"{{user}}'s Chats": "צ'אטים של {{user}}",
 	"{{webUIName}} Backend Required": "נדרש Backend של {{webUIName}}",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "משתמש",
 	"About": "אודות",
 	"Account": "חשבון",
 	"Accurate information": "מידע מדויק",
 	"Add": "הוסף",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "הוסף כותרת קצרה לפקודה זו",
 	"Add a tag": "הוסף תג",
 	"Add custom prompt": "הוסף פקודה מותאמת אישית",
@@ -31,7 +31,7 @@
 	"Admin Panel": "לוח בקרה למנהל",
 	"Admin Settings": "הגדרות מנהל",
 	"Advanced Parameters": "פרמטרים מתקדמים",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "הכל",
 	"All Documents": "כל המסמכים",
 	"All Users": "כל המשתמשים",
@@ -48,7 +48,7 @@
 	"API keys": "מפתחות API",
 	"April": "אפריל",
 	"Archive": "ארכיון",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả các cuộc trò chuyện đều được lưu trữ.",
 	"Archived Chats": "צ'אטים מאורכבים",
 	"are allowed - Activate this command by typing": "מותרים - הפעל פקודה זו על ידי הקלדה",
 	"Are you sure?": "האם אתה בטוח?",
@@ -63,14 +63,14 @@
 	"available!": "זמין!",
 	"Back": "חזור",
 	"Bad Response": "תגובה שגויה",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Cờ huyệt",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "לפני",
 	"Being lazy": "להיות עצלן",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "עקוף אימות SSL עבור אתרים",
 	"Cancel": "בטל",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "שנה סיסמה",
 	"Chat": "צ'אט",
 	"Chat Bubble UI": "UI של תיבת הדיבור",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "לחץ כאן לבחירת מסמכים.",
 	"click here.": "לחץ כאן.",
 	"Click on the user role button to change a user's role.": "לחץ על כפתור תפקיד המשתמש כדי לשנות את תפקיד המשתמש.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "סגור",
 	"Collection": "אוסף",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "כתובת URL בסיסית של ComfyUI",
 	"ComfyUI Base URL is required.": "נדרשת כתובת URL בסיסית של ComfyUI",
 	"Command": "פקודה",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "אשר סיסמה",
 	"Connections": "חיבורים",
 	"Content": "תוכן",
@@ -114,7 +114,7 @@
 	"Copy Link": "העתק קישור",
 	"Copying to clipboard was successful!": "ההעתקה ללוח הייתה מוצלחת!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "צור ביטוי תמציתי של 3-5 מילים ככותרת לשאילתה הבאה, תוך שמירה מדויקת על מגבלת 3-5 המילים והימנעות משימוש במילה 'כותרת':",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "צור חשבון",
 	"Create new key": "צור מפתח חדש",
 	"Create new secret key": "צור מפתח סודי חדש",
@@ -123,7 +123,7 @@
 	"Current Model": "המודל הנוכחי",
 	"Current Password": "הסיסמה הנוכחית",
 	"Custom": "מותאם אישית",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình cho một mục đích cụ thể.",
 	"Dark": "כהה",
 	"Database": "מסד נתונים",
 	"December": "דצמבר",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "ברירת מחדל (Automatic1111)",
 	"Default (SentenceTransformers)": "ברירת מחדל (SentenceTransformers)",
 	"Default (Web API)": "ברירת מחדל (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "המודל המוגדר כברירת מחדל עודכן",
 	"Default Prompt Suggestions": "הצעות ברירת מחדל לפקודות",
 	"Default User Role": "תפקיד משתמש ברירת מחדל",
 	"delete": "מחק",
 	"Delete": "מחק",
 	"Delete a model": "מחק מודל",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "מחק צ'אט",
 	"Delete Chat": "מחק צ'אט",
 	"delete this link": "מחק את הקישור הזה",
 	"Delete User": "מחק משתמש",
 	"Deleted {{deleteModelTag}}": "נמחק {{deleteModelTag}}",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Đã xóa {{name}}",
 	"Description": "תיאור",
 	"Didn't fully follow instructions": "לא עקב אחרי ההוראות באופן מלא",
 	"Disabled": "מושבת",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "גלה פקודה",
 	"Discover, download, and explore custom prompts": "גלה, הורד, וחקור פקודות מותאמות אישית",
 	"Discover, download, and explore model presets": "גלה, הורד, וחקור הגדרות מודל מוגדרות מראש",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "מנוע מודל הטמעה",
 	"Embedding model set to \"{{embedding_model}}\"": "מודל ההטמעה הוגדר ל-\"{{embedding_model}}\"",
 	"Enable Chat History": "הפעל היסטוריית צ'אט",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "אפשר הרשמות חדשות",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "מופעל",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "ודא שקובץ ה-CSV שלך כולל 4 עמודות בסדר הבא: שם, דוא\"ל, סיסמה, תפקיד.",
 	"Enter {{role}} message here": "הזן הודעת {{role}} כאן",
 	"Enter a detail about yourself for your LLMs to recall": "הזן פרטים על עצמך כדי שLLMs יזכור",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "הזן חפיפת נתונים",
 	"Enter Chunk Size": "הזן גודל נתונים",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập khóa API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "הזן גודל תמונה (למשל 512x512)",
 	"Enter language codes": "הזן קודי שפה",
 	"Enter model tag (e.g. {{modelTag}})": "הזן תג מודל (למשל {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "הזן מספר שלבים (למשל 50)",
 	"Enter Score": "הזן ציון",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "הזן רצף עצירה",
 	"Enter Top K": "הזן Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "הזן כתובת URL (למשל http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "הזן את שמך המלא",
 	"Enter Your Password": "הזן את הסיסמה שלך",
 	"Enter Your Role": "הזן את התפקיד שלך",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "ניסיוני",
 	"Export All Chats (All Users)": "ייצוא כל הצ'אטים (כל המשתמשים)",
 	"Export Chats": "ייצוא צ'אטים",
 	"Export Documents Mapping": "ייצוא מיפוי מסמכים",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "ייצוא פקודות",
 	"Failed to create API Key.": "יצירת מפתח API נכשלה.",
 	"Failed to read clipboard contents": "קריאת תוכן הלוח נכשלה",
@@ -220,15 +220,15 @@
 	"Focus chat input": "מיקוד הקלט לצ'אט",
 	"Followed instructions perfectly": "עקב אחר ההוראות במושלמות",
 	"Format your variables using square brackets like this:": "עצב את המשתנים שלך באמצעות סוגריים מרובעים כך:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "מצב מסך מלא",
 	"General": "כללי",
 	"General Settings": "הגדרות כלליות",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "מידע על היצירה",
 	"Good Response": "תגובה טובה",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "אין שיחות.",
 	"Hello, {{name}}": "שלום, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "תמונות",
 	"Import Chats": "יבוא צ'אטים",
 	"Import Documents Mapping": "יבוא מיפוי מסמכים",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "יבוא פקודות",
 	"Include `--api` flag when running stable-diffusion-webui": "כלול את הדגל `--api` בעת הרצת stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "פקודות קלט",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "ממשק",
 	"Invalid Tag": "תג לא חוקי",
 	"January": "ינואר",
 	"join our Discord for help.": "הצטרף ל-Discord שלנו לעזרה.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "יולי",
 	"June": "יוני",
 	"JWT Expiration": "תפוגת JWT",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "ודא להקיף אותם עם",
 	"Manage Models": "נהל מודלים",
 	"Manage Ollama Models": "נהל מודלים של Ollama",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "מרץ",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "ניתן להוריד מקסימום 3 מודלים בו זמנית. אנא נסה שוב מאוחר יותר.",
 	"May": "מאי",
 	"Memories accessible by LLMs will be shown here.": "מזכירים נגישים על ידי LLMs יוצגו כאן.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "המודל '{{modelName}}' הורד בהצלחה.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "המודל '{{modelTag}}' כבר בתור להורדה.",
 	"Model {{modelId}} not found": "המודל {{modelId}} לא נמצא",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Model {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "נתיב מערכת הקבצים של המודל זוהה. נדרש שם קצר של המודל לעדכון, לא ניתן להמשיך.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "לא נבחר מודל",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "רישום לבן של מודלים",
 	"Model(s) Whitelisted": "מודלים שנכללו ברשימה הלבנה",
 	"Modelfile Content": "תוכן קובץ מודל",
@@ -300,13 +300,13 @@
 	"More": "עוד",
 	"Name": "שם",
 	"Name Tag": "תג שם",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "צ'אט חדש",
 	"New Password": "סיסמה חדשה",
 	"No results found": "לא נמצאו תוצאות",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra.",
 	"No source available": "אין מקור זמין",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "לא נכון מבחינה עובדתית",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "הערה: אם תקבע ציון מינימלי, החיפוש יחזיר רק מסמכים עם ציון שגבוה או שווה לציון המינימלי.",
 	"Notifications": "התראות",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "בסדר, בואו נתחיל!",
 	"OLED Dark": "OLED כהה",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "גרסת Ollama",
 	"On": "פועל",
 	"Only": "רק",
@@ -341,8 +341,8 @@
 	"pending": "ממתין",
 	"Permission denied when accessing microphone: {{error}}": "ההרשאה נדחתה בעת גישה למיקרופון: {{error}}",
 	"Personalization": "תאור",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Dây chuyền",
+	"Pipelines Valves": "Công tắc đường bộ",
 	"Plain text (.txt)": "טקסט פשוט (.txt)",
 	"Playground": "אזור משחקים",
 	"Positive attitude": "גישה חיובית",
@@ -387,33 +387,33 @@
 	"Scan for documents from {{path}}": "סרוק מסמכים מ-{{path}}",
 	"Search": "חפש",
 	"Search a model": "חפש מודל",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "חפש מסמכים",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "חפש פקודות",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_two": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_two": "Tìm kiếm {{count}} trang web hai",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "ראה את readme.md להוראות",
 	"See what's new": "ראה מה חדש",
 	"Seed": "זרע",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "בחר מצב",
 	"Select a model": "בחר מודל",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường ống (pipeline)",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "בחר מופע של Ollama",
 	"Select model": "בחר מודל",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mẫu được chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "שלח",
 	"Send a Message": "שלח הודעה",
 	"Send message": "שלח הודעה",
 	"September": "ספטמבר",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "החיבור לשרת אומת",
 	"Set as default": "הגדר כברירת מחדל",
 	"Set Default Model": "הגדר מודל ברירת מחדל",
@@ -422,7 +422,7 @@
 	"Set Model": "הגדר מודל",
 	"Set reranking model (e.g. {{model}})": "הגדר מודל דירוג מחדש (למשל {{model}})",
 	"Set Steps": "הגדר שלבים",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt mô hình nhiệm vụ",
 	"Set Voice": "הגדר קול",
 	"Settings": "הגדרות",
 	"Settings saved successfully!": "ההגדרות נשמרו בהצלחה!",
@@ -481,14 +481,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "קשה לגשת לOllama?",
 	"TTS Settings": "הגדרות TTS",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "הקלד כתובת URL של פתרון פנים מחבק (הורד)",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "או-הו! אירעה בעיה בהתחברות ל- {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "סוג קובץ לא ידוע '{{file_type}}', אך מקבל ומתייחס אליו כטקסט רגיל",
 	"Update and Copy Link": "עדכן ושכפל קישור",
 	"Update password": "עדכן סיסמה",
 	"Upload a GGUF model": "העלה מודל GGUF",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "תקדמות העלאה",
 	"URL Mode": "מצב URL",
 	"Use '#' in the prompt input to load and select your documents.": "השתמש ב- '#' בקלט הבקשה כדי לטעון ולבחור את המסמכים שלך.",
@@ -502,13 +502,13 @@
 	"variable": "משתנה",
 	"variable to have them replaced with clipboard content.": "משתנה להחליפו ב- clipboard תוכן.",
 	"Version": "גרסה",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "אזהרה: אם תעדכן או תשנה את מודל ההטבעה שלך, יהיה עליך לייבא מחדש את כל המסמכים.",
 	"Web": "רשת",
 	"Web Loader Settings": "הגדרות טעינת אתר",
 	"Web Params": "פרמטרים Web",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "URL Webhook",
 	"WebUI Add-ons": "נסיונות WebUI",
 	"WebUI Settings": "הגדרות WebUI",
@@ -521,7 +521,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "כתוב סיכום ב-50 מילים שמסכם [נושא או מילת מפתח].",
 	"Yesterday": "אתמול",
 	"You": "אתה",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "אין לך שיחות בארכיון.",
 	"You have shared this chat": "שיתפת את השיחה הזו",
 	"You're a helpful assistant.": "אתה עוזר מועיל.",
@@ -529,3 +529,4 @@
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "הגדרות Youtube Loader"
 }
+
