--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(ベータ版)",
 	"(e.g. `sh webui.sh --api`)": "(例: `sh webui.sh --api`)",
 	"(latest)": "(最新)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô-đun }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở.",
 	"{{modelName}} is thinking...": "{{modelName}} は思考中です...",
 	"{{user}}'s Chats": "{{user}} のチャット",
 	"{{webUIName}} Backend Required": "{{webUIName}} バックエンドが必要です",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "ユーザー",
 	"About": "概要",
 	"Account": "アカウント",
 	"Accurate information": "情報の正確性",
 	"Add": "追加",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "このプロンプトの短いタイトルを追加",
 	"Add a tag": "タグを追加",
 	"Add custom prompt": "カスタムプロンプトを追加",
@@ -31,7 +31,7 @@
 	"Admin Panel": "管理者パネル",
 	"Admin Settings": "管理者設定",
 	"Advanced Parameters": "詳細パラメーター",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "すべて",
 	"All Documents": "全てのドキュメント",
 	"All Users": "すべてのユーザー",
@@ -48,7 +48,7 @@
 	"API keys": "API キー",
 	"April": "4月",
 	"Archive": "アーカイブ",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả Tin nhắn đều được Lưu trữ",
 	"Archived Chats": "チャット記録",
 	"are allowed - Activate this command by typing": "が許可されています - 次のように入力してこのコマンドをアクティブ化します",
 	"Are you sure?": "よろしいですか？",
@@ -63,14 +63,14 @@
 	"available!": "利用可能！",
 	"Back": "戻る",
 	"Bad Response": "応答が悪い",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "より前",
 	"Being lazy": "怠惰な",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "SSL 検証をバイパスする",
 	"Cancel": "キャンセル",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "パスワードを変更",
 	"Chat": "チャット",
 	"Chat Bubble UI": "チャットバブルUI",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "ドキュメントを選択するにはここをクリックしてください。",
 	"click here.": "ここをクリックしてください。",
 	"Click on the user role button to change a user's role.": "ユーザーの役割を変更するには、ユーザー役割ボタンをクリックしてください。",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "閉じる",
 	"Collection": "コレクション",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUIベースURL",
 	"ComfyUI Base URL is required.": "ComfyUIベースURLが必要です。",
 	"Command": "コマンド",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "パスワードを確認",
 	"Connections": "接続",
 	"Content": "コンテンツ",
@@ -114,7 +114,7 @@
 	"Copy Link": "リンクをコピー",
 	"Copying to clipboard was successful!": "クリップボードへのコピーが成功しました！",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "次のクエリの見出しとして、3〜5語の簡潔なフレーズを作成してください。3〜5語の制限を厳守し、「タイトル」という単語の使用を避けてください。",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "アカウントを作成",
 	"Create new key": "新しいキーを作成",
 	"Create new secret key": "新しいシークレットキーを作成",
@@ -123,7 +123,7 @@
 	"Current Model": "現在のモデル",
 	"Current Password": "現在のパスワード",
 	"Custom": "カスタム",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình để phục vụ một mục đích cụ thể.",
 	"Dark": "ダーク",
 	"Database": "データベース",
 	"December": "12月",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "デフォルト (Automatic1111)",
 	"Default (SentenceTransformers)": "デフォルト (SentenceTransformers)",
 	"Default (Web API)": "デフォルト (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "デフォルトモデルが更新されました",
 	"Default Prompt Suggestions": "デフォルトのプロンプトの提案",
 	"Default User Role": "デフォルトのユーザー役割",
 	"delete": "削除",
 	"Delete": "削除",
 	"Delete a model": "モデルを削除",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "チャットを削除",
 	"Delete Chat": "チャットを削除",
 	"delete this link": "このリンクを削除します",
 	"Delete User": "ユーザーを削除",
 	"Deleted {{deleteModelTag}}": "{{deleteModelTag}} を削除しました",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Xóa {{name}}",
 	"Description": "説明",
 	"Didn't fully follow instructions": "説明に沿って操作していませんでした",
 	"Disabled": "無効",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "プロンプトを見つける",
 	"Discover, download, and explore custom prompts": "カスタムプロンプトを見つけて、ダウンロードして、探索",
 	"Discover, download, and explore model presets": "モデルプリセットを見つけて、ダウンロードして、探索",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "埋め込みモデルエンジン",
 	"Embedding model set to \"{{embedding_model}}\"": "埋め込みモデルを\"{{embedding_model}}\"に設定しました",
 	"Enable Chat History": "チャット履歴を有効化",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "新規登録を有効化",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "有効",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSVファイルに4つの列が含まれていることを確認してください: Name, Email, Password, Role.",
 	"Enter {{role}} message here": "{{role}} メッセージをここに入力してください",
 	"Enter a detail about yourself for your LLMs to recall": "LLM が記憶するために、自分についての詳細を入力してください",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "チャンクオーバーラップを入力してください",
 	"Enter Chunk Size": "チャンクサイズを入力してください",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập khóa API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "画像サイズを入力してください (例: 512x512)",
 	"Enter language codes": "言語コードを入力してください",
 	"Enter model tag (e.g. {{modelTag}})": "モデルタグを入力してください (例: {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "ステップ数を入力してください (例: 50)",
 	"Enter Score": "スコアを入力してください",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "ストップシーケンスを入力してください",
 	"Enter Top K": "トップ K を入力してください",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "URL を入力してください (例: http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "フルネームを入力してください",
 	"Enter Your Password": "パスワードを入力してください",
 	"Enter Your Role": "ロールを入力してください",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "実験的",
 	"Export All Chats (All Users)": "すべてのチャットをエクスポート (すべてのユーザー)",
 	"Export Chats": "チャットをエクスポート",
 	"Export Documents Mapping": "ドキュメントマッピングをエクスポート",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "プロンプトをエクスポート",
 	"Failed to create API Key.": "APIキーの作成に失敗しました。",
 	"Failed to read clipboard contents": "クリップボードの内容を読み取れませんでした",
@@ -220,15 +220,15 @@
 	"Focus chat input": "チャット入力をフォーカス",
 	"Followed instructions perfectly": "完全に指示に従った",
 	"Format your variables using square brackets like this:": "次のように角括弧を使用して変数をフォーマットします。",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "フルスクリーンモード",
 	"General": "一般",
 	"General Settings": "一般設定",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "生成情報",
 	"Good Response": "良い応答",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "対話はありません。",
 	"Hello, {{name}}": "こんにちは、{{name}} さん",
@@ -242,18 +242,18 @@
 	"Images": "画像",
 	"Import Chats": "チャットをインポート",
 	"Import Documents Mapping": "ドキュメントマッピングをインポート",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "プロンプトをインポート",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webuiを実行する際に`--api`フラグを含める",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "入力コマンド",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "インターフェース",
 	"Invalid Tag": "無効なタグ",
 	"January": "1月",
 	"join our Discord for help.": "ヘルプについては、Discord に参加してください。",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "7月",
 	"June": "6月",
 	"JWT Expiration": "JWT 有効期限",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "必ず次で囲んでください",
 	"Manage Models": "モデルを管理",
 	"Manage Ollama Models": "Ollama モデルを管理",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "3月",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "同時にダウンロードできるモデルは最大 3 つです。後でもう一度お試しください。",
 	"May": "5月",
 	"Memories accessible by LLMs will be shown here.": "LLM がアクセスできるメモリはここに表示されます。",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "モデル '{{modelName}}' が正常にダウンロードされました。",
 	"Model '{{modelTag}}' is already in queue for downloading.": "モデル '{{modelTag}}' はすでにダウンロード待ち行列に入っています。",
 	"Model {{modelId}} not found": "モデル {{modelId}} が見つかりません",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Model {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "モデルファイルシステムパスが検出されました。モデルの短縮名が必要です。更新できません。",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "モデルが選択されていません",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "モデルホワイトリスト",
 	"Model(s) Whitelisted": "ホワイトリストに登録されたモデル",
 	"Modelfile Content": "モデルファイルの内容",
@@ -300,13 +300,13 @@
 	"More": "もっと見る",
 	"Name": "名前",
 	"Name Tag": "名前タグ",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "新しいチャット",
 	"New Password": "新しいパスワード",
 	"No results found": "結果が見つかりません",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "使用可能なソースがありません",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "実事上正しくない",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "注意：最小スコアを設定した場合、検索は最小スコア以上のスコアを持つドキュメントのみを返します。",
 	"Notifications": "デスクトップ通知",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "OK、始めましょう！",
 	"OLED Dark": "OLED ダーク",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Ollama バージョン",
 	"On": "オン",
 	"Only": "のみ",
@@ -341,8 +341,8 @@
 	"pending": "保留中",
 	"Permission denied when accessing microphone: {{error}}": "マイクへのアクセス時に権限が拒否されました: {{error}}",
 	"Personalization": "個人化",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Đường ống và_Valves",
 	"Plain text (.txt)": "プレーンテキスト (.txt)",
 	"Playground": "プレイグラウンド",
 	"Positive attitude": "陽気な態度",
@@ -387,31 +387,31 @@
 	"Scan for documents from {{path}}": "{{path}} からドキュメントをスキャン",
 	"Search": "検索",
 	"Search a model": "モデルを検索",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "ドキュメントを検索",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "プロンプトを検索",
-	"Search Result Count": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "手順については readme.md を参照してください",
 	"See what's new": "新機能を見る",
 	"Seed": "シード",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "モードを選択",
 	"Select a model": "モデルを選択",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một pipeline",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Ollama インスタンスを選択",
 	"Select model": "モデルを選択",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mẫu được chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "送信",
 	"Send a Message": "メッセージを送信",
 	"Send message": "メッセージを送信",
 	"September": "9月",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "サーバー接続が確認されました",
 	"Set as default": "デフォルトに設定",
 	"Set Default Model": "デフォルトモデルを設定",
@@ -420,7 +420,7 @@
 	"Set Model": "モデルを設定",
 	"Set reranking model (e.g. {{model}})": "モデルを設定します（例：{{model}}）",
 	"Set Steps": "ステップを設定",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt mô hình nhiệm vụ",
 	"Set Voice": "音声を設定",
 	"Settings": "設定",
 	"Settings saved successfully!": "設定が正常に保存されました！",
@@ -479,14 +479,14 @@
 	"Top P": "トップ P",
 	"Trouble accessing Ollama?": "Ollama へのアクセスに問題がありますか？",
 	"TTS Settings": "TTS 設定",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (ダウンロード) URL を入力してください",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "おっと！ {{provider}} への接続に問題が発生しました。",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "不明なファイルタイプ '{{file_type}}' ですが、プレーンテキストとして受け入れて処理します",
 	"Update and Copy Link": "リンクの更新とコピー",
 	"Update password": "パスワードを更新",
 	"Upload a GGUF model": "GGUF モデルをアップロード",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "アップロードの進行状況",
 	"URL Mode": "URL モード",
 	"Use '#' in the prompt input to load and select your documents.": "プロンプト入力で '#' を使用して、ドキュメントを読み込んで選択します。",
@@ -500,13 +500,13 @@
 	"variable": "変数",
 	"variable to have them replaced with clipboard content.": "クリップボードの内容に置き換える変数。",
 	"Version": "バージョン",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告: 埋め込みモデルを更新または変更した場合は、すべてのドキュメントを再インポートする必要があります。",
 	"Web": "ウェブ",
 	"Web Loader Settings": "Web 読み込み設定",
 	"Web Params": "Web パラメータ",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Webhook URL",
 	"WebUI Add-ons": "WebUI アドオン",
 	"WebUI Settings": "WebUI 設定",
@@ -519,7 +519,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[トピックまたはキーワード] を要約する 50 語の概要を書いてください。",
 	"Yesterday": "昨日",
 	"You": "あなた",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "これまでにアーカイブされた会話はありません。",
 	"You have shared this chat": "このチャットを共有しました",
 	"You're a helpful assistant.": "あなたは役に立つアシスタントです。",
