--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(ბეტა)",
 	"(e.g. `sh webui.sh --api`)": "(მაგ. `sh webui.sh --api`)",
 	"(latest)": "(უახლესი)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô hình }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở.",
 	"{{modelName}} is thinking...": "{{modelName}} ფიქრობს...",
 	"{{user}}'s Chats": "{{user}}-ის ჩათები",
 	"{{webUIName}} Backend Required": "{{webUIName}} საჭიროა ბექენდი",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "მომხმარებელი",
 	"About": "შესახებ",
 	"Account": "ანგარიში",
 	"Accurate information": "დიდი ინფორმაცია",
 	"Add": "დამატება",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "დაამატე მოკლე სათაური ამ მოთხოვნისთვის",
 	"Add a tag": "დაამატე ტეგი",
 	"Add custom prompt": "პირველადი მოთხოვნის დამატება",
@@ -31,7 +31,7 @@
 	"Admin Panel": "ადმინ პანელი",
 	"Admin Settings": "ადმინისტრატორის ხელსაწყოები",
 	"Advanced Parameters": "დამატებითი პარამეტრები",
-	"Advanced Params": "",
+	"Advanced Params": "Các Tham số tiên tiến",
 	"all": "ყველა",
 	"All Documents": "ყველა დოკუმენტი",
 	"All Users": "ყველა მომხმარებელი",
@@ -48,7 +48,7 @@
 	"API keys": "API გასაღები",
 	"April": "აპრილი",
 	"Archive": "არქივი",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả Tin nhắn đều được Lưu trữ.",
 	"Archived Chats": "ჩატის ისტორიის არქივი",
 	"are allowed - Activate this command by typing": "დაშვებულია - ბრძანების გასააქტიურებლად აკრიფეთ:",
 	"Are you sure?": "დარწმუნებული ხარ?",
@@ -63,14 +63,14 @@
 	"available!": "ხელმისაწვდომია!",
 	"Back": "უკან",
 	"Bad Response": "ხარვეზი",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "ადგილზე",
 	"Being lazy": "ჩაიტყვევა",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "SSL-ის ვერიფიკაციის გააუქმება ვებსაიტებზე",
 	"Cancel": "გაუქმება",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "პაროლის შეცვლა",
 	"Chat": "მიმოწერა",
 	"Chat Bubble UI": "ჩატის ბულბი",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "დოკუმენტების ასარჩევად, დააკლიკე აქ",
 	"click here.": "დააკლიკე აქ",
 	"Click on the user role button to change a user's role.": "დააკლიკეთ მომხმარებლის როლის ღილაკს რომ შეცვალოთ მომხმარების როლი",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "დახურვა",
 	"Collection": "ნაკრები",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI საბაზისო URL",
 	"ComfyUI Base URL is required.": "ComfyUI საბაზისო URL აუცილებელია.",
 	"Command": "ბრძანება",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "პაროლის დამოწმება",
 	"Connections": "კავშირები",
 	"Content": "კონტენტი",
@@ -114,7 +114,7 @@
 	"Copy Link": "კოპირება",
 	"Copying to clipboard was successful!": "კლავიატურაზე კოპირება წარმატებით დასრულდა",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "შექმენით მოკლე, 3-5 სიტყვიანი ფრაზა, როგორც სათაური თქვენი შემდეგი შეკითხვისთვის, მკაცრად დაიცავით 3-5 სიტყვის ლიმიტი და მოერიდეთ გამოიყენოთ სიტყვა „სათაური“.",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "ანგარიშის შექმნა",
 	"Create new key": "პირადი ღირებულბრის შექმნა",
 	"Create new secret key": "პირადი ღირებულბრის შექმნა",
@@ -123,7 +123,7 @@
 	"Current Model": "მიმდინარე მოდელი",
 	"Current Password": "მიმდინარე პაროლი",
 	"Custom": "საკუთარი",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình để phục vụ một mục đích cụ thể.",
 	"Dark": "მუქი",
 	"Database": "მონაცემთა ბაზა",
 	"December": "დეკემბერი",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "დეფოლტ (Automatic1111)",
 	"Default (SentenceTransformers)": "დეფოლტ (SentenceTransformers)",
 	"Default (Web API)": "დეფოლტ (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "დეფოლტ მოდელი განახლებულია",
 	"Default Prompt Suggestions": "დეფოლტ პრომპტი პირველი პირველი",
 	"Default User Role": "მომხმარებლის დეფოლტ როლი",
 	"delete": "წაშლა",
 	"Delete": "წაშლა",
 	"Delete a model": "მოდელის წაშლა",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "შეტყობინების წაშლა",
 	"Delete Chat": "შეტყობინების წაშლა",
 	"delete this link": "ბმულის წაშლა",
 	"Delete User": "მომხმარებლის წაშლა",
 	"Deleted {{deleteModelTag}}": "{{deleteModelTag}} წაშლილია",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Đã xóa {{name}}",
 	"Description": "აღწერა",
 	"Didn't fully follow instructions": "ვერ ყველა ინფორმაციისთვის ვერ ხელახლა ჩაწერე",
 	"Disabled": "გაუქმებულია",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "აღმოაჩინეთ მოთხოვნა",
 	"Discover, download, and explore custom prompts": "აღმოაჩინეთ, ჩამოტვირთეთ და შეისწავლეთ მორგებული მოთხოვნები",
 	"Discover, download, and explore model presets": "აღმოაჩინეთ, ჩამოტვირთეთ და შეისწავლეთ მოდელის წინასწარ პარამეტრები",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "ჩასმის ძირითადი პროგრამა",
 	"Embedding model set to \"{{embedding_model}}\"": "ჩასმის ძირითადი პროგრამა ჩართულია \"{{embedding_model}}\"",
 	"Enable Chat History": "მიმოწერის ისტორიის ჩართვა",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "ახალი რეგისტრაციების ჩართვა",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "ჩართულია",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "გთხოვთ, უზრუნველყოთ, რომთქვევის CSV-ფაილი შეიცავს 4 ველი, ჩაწერილი ორივე ველი უდრის პირველი ველით.",
 	"Enter {{role}} message here": "შეიყვანე {{role}} შეტყობინება აქ",
 	"Enter a detail about yourself for your LLMs to recall": "შეიყვანე დეტალი ჩემთათვის, რომ ჩვენი LLMs-ს შეიძლოს აღაქვს",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "შეიყვანეთ ნაწილის გადახურვა",
 	"Enter Chunk Size": "შეიყვანე ბლოკის ზომა",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập khóa API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "შეიყვანეთ სურათის ზომა (მაგ. 512x512)",
 	"Enter language codes": "შეიყვანეთ ენის კოდი",
 	"Enter model tag (e.g. {{modelTag}})": "შეიყვანეთ მოდელის ტეგი (მაგ. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "შეიყვანეთ ნაბიჯების რაოდენობა (მაგ. 50)",
 	"Enter Score": "შეიყვანეთ ქულა",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập khóa API Serper",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "შეიყვანეთ ტოპ თანმიმდევრობა",
 	"Enter Top K": "შეიყვანეთ Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "შეიყვანეთ მისამართი (მაგალითად http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "შეიყვანეთ თქვენი სრული სახელი",
 	"Enter Your Password": "შეიყვანეთ თქვენი პაროლი",
 	"Enter Your Role": "შეიყვანეთ თქვენი როლი",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "ექსპერიმენტალური",
 	"Export All Chats (All Users)": "ექსპორტი ყველა ჩათი (ყველა მომხმარებელი)",
 	"Export Chats": "მიმოწერის ექსპორტირება",
 	"Export Documents Mapping": "დოკუმენტების კავშირის ექსპორტი",
-	"Export Models": "",
+	"Export Models": "Xuất mô hình",
 	"Export Prompts": "მოთხოვნების ექსპორტი",
 	"Failed to create API Key.": "API ღილაკის შექმნა ვერ მოხერხდა.",
 	"Failed to read clipboard contents": "ბუფერში შიგთავსის წაკითხვა ვერ მოხერხდა",
@@ -220,15 +220,15 @@
 	"Focus chat input": "ჩეთის შეყვანის ფოკუსი",
 	"Followed instructions perfectly": "ყველა ინსტრუქცია უზრუნველყოფა",
 	"Format your variables using square brackets like this:": "დააფორმატეთ თქვენი ცვლადები კვადრატული ფრჩხილების გამოყენებით:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chiết khấu Tần số",
 	"Full Screen Mode": "Სრული ეკრანის რეჟიმი",
 	"General": "ზოგადი",
 	"General Settings": "ზოგადი პარამეტრები",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "გენერაციის ინფორმაცია",
 	"Good Response": "დიდი პასუხი",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "არა უფლება ჩაწერა",
 	"Hello, {{name}}": "გამარჯობა, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "სურათები",
 	"Import Chats": "მიმოწერების იმპორტი",
 	"Import Documents Mapping": "დოკუმენტების კავშირის იმპორტი",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "მოთხოვნების იმპორტი",
 	"Include `--api` flag when running stable-diffusion-webui": "ჩართეთ `--api` დროშა stable-diffusion-webui-ის გაშვებისას",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "შეყვანით ბრძანებებს",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "ინტერფეისი",
 	"Invalid Tag": "არასწორი ტეგი",
 	"January": "იანვარი",
 	"join our Discord for help.": "შეუერთდით ჩვენს Discord-ს დახმარებისთვის",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "ივნისი",
 	"June": "ივლა",
 	"JWT Expiration": "JWT-ის ვადა",
@@ -270,14 +270,14 @@
 	"Make sure to enclose them with": "დარწმუნდით, რომ დაურთეთ ისინი",
 	"Manage Models": "მოდელების მართვა",
 	"Manage Ollama Models": "Ollama მოდელების მართვა",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "მარტივი",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "მაქსიმუმ 3 მოდელის ჩამოტვირთვა შესაძლებელია ერთდროულად. Გთხოვთ სცადოთ მოგვიანებით.",
 	"May": "მაი",
 	"Memories accessible by LLMs will be shown here.": "ლლმ-ს აქვს ხელმისაწვდომი მემორიები აქ იქნება.",
 	"Memory": "მემორია",
-	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
+	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Tin nhắn bạn gửi sau khi tạo liên kết sẽ không được chia sẻ. Người dùng có URL sẽ có thể xem cuộc trò chuyện được chia sẻ.",
 	"Minimum Score": "მინიმალური ქულა",
 	"Mirostat": "მიროსტატი",
 	"Mirostat Eta": "მიროსტატი ეტა",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "მოდელი „{{modelName}}“ წარმატებით ჩამოიტვირთა.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "მოდელი „{{modelTag}}“ უკვე ჩამოტვირთვის რიგშია.",
 	"Model {{modelId}} not found": "მოდელი {{modelId}} ვერ მოიძებნა",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Modelo {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "აღმოჩენილია მოდელის ფაილური სისტემის გზა. განახლებისთვის საჭიროა მოდელის მოკლე სახელი, გაგრძელება შეუძლებელია.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "მოდელი არ არის არჩეული",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "მოდელის თეთრ სიაში შეყვანა",
 	"Model(s) Whitelisted": "მოდელ(ებ)ი თეთრ სიაშია",
 	"Modelfile Content": "მოდელური ფაილის კონტენტი",
@@ -300,13 +300,13 @@
 	"More": "ვრცლად",
 	"Name": "სახელი",
 	"Name Tag": "სახელის ტეგი",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "ახალი მიმოწერა",
 	"New Password": "ახალი პაროლი",
 	"No results found": "ჩვენ ვერ პოულობით ნაპოვნი ჩაწერები",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "წყარო არ არის ხელმისაწვდომი",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "არ ვეთანხმები პირდაპირ ვერც ვეთანხმები",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "შენიშვნა: თუ თქვენ დააყენებთ მინიმალურ ქულას, ძებნა დააბრუნებს მხოლოდ დოკუმენტებს მინიმალური ქულის მეტი ან ტოლი ქულით.",
 	"Notifications": "შეტყობინება",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "კარგი, წავედით!",
 	"OLED Dark": "OLED მუქი",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Ollama ვერსია",
 	"On": "ჩართვა",
 	"Only": "მხოლოდ",
@@ -341,8 +341,8 @@
 	"pending": "ლოდინის რეჟიმშია",
 	"Permission denied when accessing microphone: {{error}}": "ნებართვა უარყოფილია მიკროფონზე წვდომისას: {{error}}",
 	"Personalization": "პერსონალიზაცია",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Hậu trình",
+	"Pipelines Valves": "Công tắc và đường ống",
 	"Plain text (.txt)": "ტექსტი (.txt)",
 	"Playground": "სათამაშო მოედანი",
 	"Positive attitude": "პოზიტიური ანგარიში",
@@ -387,32 +387,32 @@
 	"Scan for documents from {{path}}": "დოკუმენტების სკანირება {{ path}}-დან",
 	"Search": "ძიება",
 	"Search a model": "მოდელის ძიება",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "დოკუმენტების ძიება",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "მოთხოვნების ძიება",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "იხილეთ readme.md ინსტრუქციებისთვის",
 	"See what's new": "სიახლეების ნახვა",
 	"Seed": "სიდი",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "რეჟიმის არჩევა",
 	"Select a model": "მოდელის არჩევა",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một pipeline",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Ollama ინსტანსის არჩევა",
 	"Select model": "მოდელის არჩევა",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "გაგზავნა",
 	"Send a Message": "შეტყობინების გაგზავნა",
 	"Send message": "შეტყობინების გაგზავნა",
 	"September": "სექტემბერი",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "სერვერთან კავშირი დადასტურებულია",
 	"Set as default": "დეფოლტად დაყენება",
 	"Set Default Model": "დეფოლტ მოდელის დაყენება",
@@ -421,7 +421,7 @@
 	"Set Model": "მოდელის დაყენება",
 	"Set reranking model (e.g. {{model}})": "რეტარირება მოდელის დაყენება (მაგ. {{model}})",
 	"Set Steps": "ნაბიჯების დაყენება",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt mô hình nhiệm vụ",
 	"Set Voice": "ხმის დაყენება",
 	"Settings": "ხელსაწყოები",
 	"Settings saved successfully!": "პარამეტრები წარმატებით განახლდა!",
@@ -480,14 +480,14 @@
 	"Top P": "ტოპ P",
 	"Trouble accessing Ollama?": "Ollama-ს ვერ უკავშირდები?",
 	"TTS Settings": "TTS პარამეტრები",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "სცადე გადმოწერო Hugging Face Resolve URL",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "{{provider}}-თან დაკავშირების პრობლემა წარმოიშვა.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "უცნობი ფაილის ტიპი „{{file_type}}“, მაგრამ მიიღება და განიხილება როგორც მარტივი ტექსტი",
 	"Update and Copy Link": "განახლება და ბმულის კოპირება",
 	"Update password": "პაროლის განახლება",
 	"Upload a GGUF model": "GGUF მოდელის ატვირთვა",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "პროგრესის ატვირთვა",
 	"URL Mode": "URL რეჟიმი",
 	"Use '#' in the prompt input to load and select your documents.": "პრომტში გამოიყენე '#' რომელიც გაიტანს დოკუმენტებს",
@@ -501,13 +501,13 @@
 	"variable": "ცვლადი",
 	"variable to have them replaced with clipboard content.": "ცვლადი, რომ შეცვალოს ისინი ბუფერში შიგთავსით.",
 	"Version": "ვერსია",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "გაფრთხილება: თუ განაახლებთ ან შეცვლით ჩანერგვის მოდელს, მოგიწევთ ყველა დოკუმენტის ხელახლა იმპორტი.",
 	"Web": "ვები",
 	"Web Loader Settings": "ვების ჩატარების პარამეტრები",
 	"Web Params": "ვების პარამეტრები",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Webhook URL",
 	"WebUI Add-ons": "WebUI დანამატები",
 	"WebUI Settings": "WebUI პარამეტრები",
@@ -520,7 +520,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "დაწერეთ რეზიუმე 50 სიტყვით, რომელიც აჯამებს [თემას ან საკვანძო სიტყვას].",
 	"Yesterday": "აღდგენა",
 	"You": "ჩემი",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "არ ხართ არქივირებული განხილვები.",
 	"You have shared this chat": "ამ ჩატის გააგზავნა",
 	"You're a helpful assistant.": "თქვენ სასარგებლო ასისტენტი ხართ.",
