--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api`)": "(예: `sh webui.sh --api`)",
 	"(latest)": "(latest)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô hình }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở",
 	"{{modelName}} is thinking...": "{{modelName}} 이(가) 생각중입니다....",
 	"{{user}}'s Chats": "{{user}}의 채팅",
 	"{{webUIName}} Backend Required": "{{webUIName}} 백엔드가 필요합니다.",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "사용자",
 	"About": "소개",
 	"Account": "계정",
 	"Accurate information": "정확한 정보",
 	"Add": "추가",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "이 프롬프트에 대한 간단한 제목 추가",
 	"Add a tag": "태그 추가",
 	"Add custom prompt": "프롬프트 추가",
@@ -31,7 +31,7 @@
 	"Admin Panel": "관리자 패널",
 	"Admin Settings": "관리자 설정",
 	"Advanced Parameters": "고급 매개변수",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "모두",
 	"All Documents": "모든 문서",
 	"All Users": "모든 사용자",
@@ -48,7 +48,7 @@
 	"API keys": "API 키",
 	"April": "4월",
 	"Archive": "아카이브",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả Tin nhắn đều được Lưu trữ",
 	"Archived Chats": "채팅 기록 아카이브",
 	"are allowed - Activate this command by typing": "허용됩니다 - 이 명령을 활성화하려면 입력하세요.",
 	"Are you sure?": "확실합니까?",
@@ -63,14 +63,14 @@
 	"available!": "사용 가능!",
 	"Back": "뒤로가기",
 	"Bad Response": "응답이 좋지 않습니다.",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "이전",
 	"Being lazy": "게으름 피우기",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Brave Search",
 	"Bypass SSL verification for Websites": "SSL 검증을 무시하려면 웹 사이트를 선택하세요.",
 	"Cancel": "취소",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "비밀번호 변경",
 	"Chat": "채팅",
 	"Chat Bubble UI": "채팅 버블 UI",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "문서를 선택하려면 여기를 클릭하세요.",
 	"click here.": "여기를 클릭하세요.",
 	"Click on the user role button to change a user's role.": "사용자 역할 버튼을 클릭하여 사용자의 역할을 변경하세요.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "닫기",
 	"Collection": "컬렉션",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI 기본 URL",
 	"ComfyUI Base URL is required.": "ComfyUI 기본 URL이 필요합니다.",
 	"Command": "명령",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "비밀번호 확인",
 	"Connections": "연결",
 	"Content": "내용",
@@ -114,7 +114,7 @@
 	"Copy Link": "링크 복사",
 	"Copying to clipboard was successful!": "클립보드에 복사되었습니다!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "다음 질문에 대한 제목으로 간결한 3-5 단어 문구를 만드되 3-5 단어 제한을 엄격히 준수하고 'title' 단어 사용을 피하세요:",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "계정 만들기",
 	"Create new key": "새 키 만들기",
 	"Create new secret key": "새 비밀 키 만들기",
@@ -123,7 +123,7 @@
 	"Current Model": "현재 모델",
 	"Current Password": "현재 비밀번호",
 	"Custom": "사용자 정의",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình cho một mục đích cụ thể.",
 	"Dark": "어두운",
 	"Database": "데이터베이스",
 	"December": "12월",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "기본값 (Automatic1111)",
 	"Default (SentenceTransformers)": "기본값 (SentenceTransformers)",
 	"Default (Web API)": "기본값 (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "기본 모델이 업데이트되었습니다.",
 	"Default Prompt Suggestions": "기본 프롬프트 제안",
 	"Default User Role": "기본 사용자 역할",
 	"delete": "삭제",
 	"Delete": "삭제",
 	"Delete a model": "모델 삭제",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "채팅 삭제",
 	"Delete Chat": "채팅 삭제",
 	"delete this link": "이 링크를 삭제합니다.",
 	"Delete User": "사용자 삭제",
 	"Deleted {{deleteModelTag}}": "{{deleteModelTag}} 삭제됨",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Xóa {{name}}",
 	"Description": "설명",
 	"Didn't fully follow instructions": "완전히 지침을 따르지 않음",
 	"Disabled": "비활성화",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "프롬프트 검색",
 	"Discover, download, and explore custom prompts": "사용자 정의 프롬프트 검색, 다운로드 및 탐색",
 	"Discover, download, and explore model presets": "모델 사전 설정 검색, 다운로드 및 탐색",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "임베딩 모델 엔진",
 	"Embedding model set to \"{{embedding_model}}\"": "임베딩 모델을 \"{{embedding_model}}\"로 설정됨",
 	"Enable Chat History": "채팅 기록 활성화",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "새 회원가입 활성화",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "활성화",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV 파일에 이름, 이메일, 비밀번호, 역할 4개의 컬럼이 순서대로 포함되어 있는지 확인하세요.",
 	"Enter {{role}} message here": "여기에 {{role}} 메시지 입력",
 	"Enter a detail about yourself for your LLMs to recall": "자신에 대한 세부사항을 입력하여 LLMs가 기억할 수 있도록 하세요",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "청크 오버랩 입력",
 	"Enter Chunk Size": "청크 크기 입력",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập mã API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "이미지 크기 입력(예: 512x512)",
 	"Enter language codes": "언어 코드 입력",
 	"Enter model tag (e.g. {{modelTag}})": "모델 태그 입력(예: {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "단계 수 입력(예: 50)",
 	"Enter Score": "점수 입력",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "중지 시퀀스 입력",
 	"Enter Top K": "Top K 입력",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "URL 입력(예: http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "전체 이름 입력",
 	"Enter Your Password": "비밀번호 입력",
 	"Enter Your Role": "역할 입력",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "실험적",
 	"Export All Chats (All Users)": "모든 채팅 내보내기 (모든 사용자)",
 	"Export Chats": "채팅 내보내기",
 	"Export Documents Mapping": "문서 매핑 내보내기",
-	"Export Models": "",
+	"Export Models": "Xuất mô hình",
 	"Export Prompts": "프롬프트 내보내기",
 	"Failed to create API Key.": "API 키 생성에 실패했습니다.",
 	"Failed to read clipboard contents": "클립보드 내용을 읽는 데 실패했습니다.",
@@ -220,15 +220,15 @@
 	"Focus chat input": "채팅 입력 포커스",
 	"Followed instructions perfectly": "명령을 완벽히 따름",
 	"Format your variables using square brackets like this:": "이렇게 대괄호를 사용하여 변수를 형식화하세요:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chiết khấu Tần suất",
 	"Full Screen Mode": "전체 화면 모드",
 	"General": "일반",
 	"General Settings": "일반 설정",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "생성 정보",
 	"Good Response": "좋은 응답",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "대화가 없습니다.",
 	"Hello, {{name}}": "안녕하세요, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "이미지",
 	"Import Chats": "채팅 가져오기",
 	"Import Documents Mapping": "문서 매핑 가져오기",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "프롬프트 가져오기",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webui를 실행할 때 '--api' 플래그 포함",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "입력 명령",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "인터페이스",
 	"Invalid Tag": "잘못된 태그",
 	"January": "1월",
 	"join our Discord for help.": "도움말을 보려면 Discord에 가입하세요.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "7월",
 	"June": "6월",
 	"JWT Expiration": "JWT 만료",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "다음으로 묶는 것을 잊지 마세요:",
 	"Manage Models": "모델 관리",
 	"Manage Ollama Models": "Ollama 모델 관리",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "3월",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "최대 3개의 모델을 동시에 다운로드할 수 있습니다. 나중에 다시 시도하세요.",
 	"May": "5월",
 	"Memories accessible by LLMs will be shown here.": "LLM에서 액세스할 수 있는 메모리는 여기에 표시됩니다.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "모델 '{{modelName}}'이(가) 성공적으로 다운로드되었습니다.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "모델 '{{modelTag}}'이(가) 이미 다운로드 대기열에 있습니다.",
 	"Model {{modelId}} not found": "모델 {{modelId}}를 찾을 수 없습니다.",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Model {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "모델 파일 시스템 경로가 감지되었습니다. 업데이트하려면 모델 단축 이름이 필요하며 계속할 수 없습니다.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "모델이 선택되지 않았습니다.",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "모델 허용 목록",
 	"Model(s) Whitelisted": "허용된 모델",
 	"Modelfile Content": "모델파일 내용",
@@ -300,13 +300,13 @@
 	"More": "더보기",
 	"Name": "이름",
 	"Name Tag": "이름 태그",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "새 채팅",
 	"New Password": "새 비밀번호",
 	"No results found": "결과 없음",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra.",
 	"No source available": "사용 가능한 소스 없음",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "사실상 맞지 않음",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "참고: 최소 점수를 설정하면 검색 결과는 최소 점수 이상의 점수를 가진 문서만 반환됩니다.",
 	"Notifications": "알림",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "그렇습니다, 시작합시다!",
 	"OLED Dark": "OLED 어두운",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Ollama 버전",
 	"On": "켜기",
 	"Only": "오직",
@@ -341,8 +341,8 @@
 	"pending": "보류 중",
 	"Permission denied when accessing microphone: {{error}}": "마이크 액세스가 거부되었습니다: {{error}}",
 	"Personalization": "개인화",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Công tắc và đường ống",
 	"Plain text (.txt)": "일반 텍스트 (.txt)",
 	"Playground": "놀이터",
 	"Positive attitude": "긍정적인 자세",
@@ -387,31 +387,31 @@
 	"Scan for documents from {{path}}": "{{path}}에서 문서 스캔",
 	"Search": "검색",
 	"Search a model": "모델 검색",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "문서 검색",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "프롬프트 검색",
-	"Search Result Count": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "설명은 readme.md를 참조하세요.",
 	"See what's new": "새로운 기능 보기",
 	"Seed": "시드",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "모드 선택",
 	"Select a model": "모델 선택",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường ống (pipeline)",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Ollama 인스턴스 선택",
 	"Select model": "모델 선택",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "보내기",
 	"Send a Message": "메시지 보내기",
 	"Send message": "메시지 보내기",
 	"September": "9월",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "서버 연결 확인됨",
 	"Set as default": "기본값으로 설정",
 	"Set Default Model": "기본 모델 설정",
@@ -420,7 +420,7 @@
 	"Set Model": "모델 설정",
 	"Set reranking model (e.g. {{model}})": "랭킹 모델 설정 (예: {{model}})",
 	"Set Steps": "단계 설정",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "음성 설정",
 	"Settings": "설정",
 	"Settings saved successfully!": "설정이 성공적으로 저장되었습니다!",
@@ -479,14 +479,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "Ollama에 접근하는 데 문제가 있나요?",
 	"TTS Settings": "TTS 설정",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (다운로드) URL 입력",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "앗! {{provider}}에 연결하는 데 문제가 있었습니다.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "알 수 없는 파일 유형 '{{file_type}}', 하지만 일반 텍스트로 허용하고 처리합니다.",
 	"Update and Copy Link": "링크 업데이트 및 복사",
 	"Update password": "비밀번호 업데이트",
 	"Upload a GGUF model": "GGUF 모델 업로드",
-	"Upload Files": "",
+	"Upload Files": "Tải tệp lên",
 	"Upload Progress": "업로드 진행 상황",
 	"URL Mode": "URL 모드",
 	"Use '#' in the prompt input to load and select your documents.": "프롬프트 입력에서 '#'를 사용하여 문서를 로드하고 선택하세요.",
@@ -500,13 +500,13 @@
 	"variable": "변수",
 	"variable to have them replaced with clipboard content.": "변수를 사용하여 클립보드 내용으로 바꾸세요.",
 	"Version": "버전",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "웹 로더를 업데이트하거나 변경할 경우 모든 문서를 다시 가져와야 합니다.",
 	"Web": "웹",
 	"Web Loader Settings": "웹 로더 설정",
 	"Web Params": "웹 파라미터",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên mạng Internet",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Webhook URL",
 	"WebUI Add-ons": "WebUI 애드온",
 	"WebUI Settings": "WebUI 설정",
@@ -519,7 +519,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[주제 또는 키워드]에 대한 50단어 요약문 작성.",
 	"Yesterday": "어제",
 	"You": "당신",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "채팅을 아카이브한 적이 없습니다.",
 	"You have shared this chat": "이 채팅을 공유했습니다.",
 	"You're a helpful assistant.": "당신은 유용한 어시스턴트입니다.",
