--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api`)": "(por exemplo, `sh webui.sh --api`)",
 	"(latest)": "(mais recente)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô hình }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở.",
 	"{{modelName}} is thinking...": "{{modelName}} está pensando...",
 	"{{user}}'s Chats": "{{user}}'s Chats",
 	"{{webUIName}} Backend Required": "{{webUIName}} Backend Necessário",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "um usuário",
 	"About": "Sobre",
 	"Account": "Conta",
 	"Accurate information": "Informações precisas",
 	"Add": "Adicionar",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "Adicione um título curto para este prompt",
 	"Add a tag": "Adicionar uma tag",
 	"Add custom prompt": "Adicionar prompt personalizado",
@@ -31,7 +31,7 @@
 	"Admin Panel": "Painel do Administrador",
 	"Admin Settings": "Configurações do Administrador",
 	"Advanced Parameters": "Parâmetros Avançados",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "todos",
 	"All Documents": "Todos os Documentos",
 	"All Users": "Todos os Usuários",
@@ -48,7 +48,7 @@
 	"API keys": "Chaves da API",
 	"April": "Abril",
 	"Archive": "Arquivo",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả các cuộc trò chuyện đều được lưu trữ.",
 	"Archived Chats": "Bate-papos arquivados",
 	"are allowed - Activate this command by typing": "são permitidos - Ative este comando digitando",
 	"Are you sure?": "Tem certeza?",
@@ -63,14 +63,14 @@
 	"available!": "disponível!",
 	"Back": "Voltar",
 	"Bad Response": "Resposta ruim",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "antes",
 	"Being lazy": "Ser preguiçoso",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Ignorar verificação SSL para sites",
 	"Cancel": "Cancelar",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "Alterar Senha",
 	"Chat": "Bate-papo",
 	"Chat Bubble UI": "UI de Bala de Bate-papo",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Clique aqui para selecionar documentos.",
 	"click here.": "clique aqui.",
 	"Click on the user role button to change a user's role.": "Clique no botão de função do usuário para alterar a função de um usuário.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Fechar",
 	"Collection": "Coleção",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "URL Base do ComfyUI",
 	"ComfyUI Base URL is required.": "A URL Base do ComfyUI é obrigatória.",
 	"Command": "Comando",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Confirmar Senha",
 	"Connections": "Conexões",
 	"Content": "Conteúdo",
@@ -114,7 +114,7 @@
 	"Copy Link": "Copiar link",
 	"Copying to clipboard was successful!": "Cópia para a área de transferência bem-sucedida!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Crie uma frase concisa de 3 a 5 palavras como cabeçalho para a seguinte consulta, aderindo estritamente ao limite de 3 a 5 palavras e evitando o uso da palavra 'título':",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "Criar Conta",
 	"Create new key": "Criar nova chave",
 	"Create new secret key": "Criar nova chave secreta",
@@ -123,7 +123,7 @@
 	"Current Model": "Modelo Atual",
 	"Current Password": "Senha Atual",
 	"Custom": "Personalizado",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình để phục vụ một mục đích cụ thể.",
 	"Dark": "Escuro",
 	"Database": "Banco de dados",
 	"December": "Dezembro",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "Padrão (Automatic1111)",
 	"Default (SentenceTransformers)": "Padrão (SentenceTransformers)",
 	"Default (Web API)": "Padrão (API Web)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "Modelo padrão atualizado",
 	"Default Prompt Suggestions": "Sugestões de Prompt Padrão",
 	"Default User Role": "Função de Usuário Padrão",
 	"delete": "excluir",
 	"Delete": "Excluir",
 	"Delete a model": "Excluir um modelo",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Excluir bate-papo",
 	"Delete Chat": "Excluir Bate-papo",
 	"delete this link": "excluir este link",
 	"Delete User": "Excluir Usuário",
 	"Deleted {{deleteModelTag}}": "{{deleteModelTag}} excluído",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Đã xóa {{name}}",
 	"Description": "Descrição",
 	"Didn't fully follow instructions": "Não seguiu instruções com precisão",
 	"Disabled": "Desativado",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "Descobrir um prompt",
 	"Discover, download, and explore custom prompts": "Descubra, baixe e explore prompts personalizados",
 	"Discover, download, and explore model presets": "Descubra, baixe e explore predefinições de modelo",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Motor de Modelo de Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding definido como \"{{embedding_model}}\"",
 	"Enable Chat History": "Ativar Histórico de Bate-papo",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Ativar Novas Inscrições",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Ativado",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Garanta que seu arquivo CSV inclua 4 colunas nesta ordem: Nome, E-mail, Senha, Função.",
 	"Enter {{role}} message here": "Digite a mensagem de {{role}} aqui",
 	"Enter a detail about yourself for your LLMs to recall": "Digite um detalhe sobre você para que seus LLMs possam lembrar",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Digite a Sobreposição de Fragmento",
 	"Enter Chunk Size": "Digite o Tamanho do Fragmento",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập mã API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id",
 	"Enter Image Size (e.g. 512x512)": "Digite o Tamanho da Imagem (por exemplo, 512x512)",
 	"Enter language codes": "Digite os códigos de idioma",
 	"Enter model tag (e.g. {{modelTag}})": "Digite a tag do modelo (por exemplo, {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Digite o Número de Etapas (por exemplo, 50)",
 	"Enter Score": "Digite a Pontuação",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập Serper API Key",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Digite a sequência de parada",
 	"Enter Top K": "Digite o Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Digite a URL (por exemplo, http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "Digite seu Nome Completo",
 	"Enter Your Password": "Digite sua Senha",
 	"Enter Your Role": "Digite sua Função",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Experimental",
 	"Export All Chats (All Users)": "Exportar Todos os Bate-papos (Todos os Usuários)",
 	"Export Chats": "Exportar Bate-papos",
 	"Export Documents Mapping": "Exportar Mapeamento de Documentos",
-	"Export Models": "",
+	"Export Models": "Xuất mô hình",
 	"Export Prompts": "Exportar Prompts",
 	"Failed to create API Key.": "Falha ao criar a Chave da API.",
 	"Failed to read clipboard contents": "Falha ao ler o conteúdo da área de transferência",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Focar entrada de bate-papo",
 	"Followed instructions perfectly": "Seguiu instruções perfeitamente",
 	"Format your variables using square brackets like this:": "Formate suas variáveis usando colchetes como este:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chiết khấu Tần số",
 	"Full Screen Mode": "Modo de Tela Cheia",
 	"General": "Geral",
 	"General Settings": "Configurações Gerais",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Informações de Geração",
 	"Good Response": "Boa Resposta",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "não possui bate-papos.",
 	"Hello, {{name}}": "Olá, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "Imagens",
 	"Import Chats": "Importar Bate-papos",
 	"Import Documents Mapping": "Importar Mapeamento de Documentos",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "Importar Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclua a flag `--api` ao executar stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Comandos de entrada",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Interface",
 	"Invalid Tag": "Etiqueta Inválida",
 	"January": "Janeiro",
 	"join our Discord for help.": "junte-se ao nosso Discord para obter ajuda.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "Julho",
 	"June": "Junho",
 	"JWT Expiration": "Expiração JWT",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "Certifique-se de colocá-los entre",
 	"Manage Models": "Gerenciar Modelos",
 	"Manage Ollama Models": "Gerenciar Modelos Ollama",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "Março",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Máximo de 3 modelos podem ser baixados simultaneamente. Tente novamente mais tarde.",
 	"May": "Maio",
 	"Memories accessible by LLMs will be shown here.": "Memórias acessíveis por LLMs serão mostradas aqui.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "O modelo '{{modelName}}' foi baixado com sucesso.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "O modelo '{{modelTag}}' já está na fila para download.",
 	"Model {{modelId}} not found": "Modelo {{modelId}} não encontrado",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Modelo {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Otkrivena putanja datoteke modela. Skraćeno ime modela je potrebno za ažuriranje, ne može se nastaviti.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "Modelo não selecionado",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "Lista de Permissões de Modelo",
 	"Model(s) Whitelisted": "Modelo(s) na Lista de Permissões",
 	"Modelfile Content": "Conteúdo do Arquivo de Modelo",
@@ -300,13 +300,13 @@
 	"More": "Mais",
 	"Name": "Nome",
 	"Name Tag": "Nome da Tag",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "Novo Bate-papo",
 	"New Password": "Nova Senha",
 	"No results found": "Nenhum resultado encontrado",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra.",
 	"No source available": "Nenhuma fonte disponível",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "Não é correto em termos factuais",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Nota: Se você definir uma pontuação mínima, a pesquisa só retornará documentos com uma pontuação maior ou igual à pontuação mínima.",
 	"Notifications": "Notificações da Área de Trabalho",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "Ok, Vamos Lá!",
 	"OLED Dark": "OLED Escuro",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Versão do Ollama",
 	"On": "Ligado",
 	"Only": "Somente",
@@ -341,8 +341,8 @@
 	"pending": "pendente",
 	"Permission denied when accessing microphone: {{error}}": "Permissão negada ao acessar o microfone: {{error}}",
 	"Personalization": "Personalização",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Công tắc đường bộ",
 	"Plain text (.txt)": "Texto sem formatação (.txt)",
 	"Playground": "Parque infantil",
 	"Positive attitude": "Atitude Positiva",
@@ -387,33 +387,33 @@
 	"Scan for documents from {{path}}": "Digitalizar documentos de {{path}}",
 	"Search": "Pesquisar",
 	"Search a model": "Pesquisar um modelo",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "Pesquisar Documentos",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Pesquisar Prompts",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_many": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_many": "Tìm kiếm trên {{count}} trang web_many",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Consulte readme.md para obter instruções",
 	"See what's new": "Veja o que há de novo",
 	"Seed": "Semente",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "Selecione um modo",
 	"Select a model": "Selecione um modelo",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường dẫn pipline",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Selecione uma instância Ollama",
 	"Select model": "Selecione um modelo",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "Enviar",
 	"Send a Message": "Enviar uma Mensagem",
 	"Send message": "Enviar mensagem",
 	"September": "Setembro",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Conexão com o servidor verificada",
 	"Set as default": "Definir como padrão",
 	"Set Default Model": "Definir Modelo Padrão",
@@ -422,7 +422,7 @@
 	"Set Model": "Definir Modelo",
 	"Set reranking model (e.g. {{model}})": "Definir modelo de reranking (ex.: {{model}})",
 	"Set Steps": "Definir Etapas",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "Definir Voz",
 	"Settings": "Configurações",
 	"Settings saved successfully!": "Configurações salvas com sucesso!",
@@ -481,14 +481,14 @@
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "Problemas para acessar o Ollama?",
 	"TTS Settings": "Configurações TTS",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Digite a URL do Hugging Face Resolve (Download)",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Opa! Houve um problema ao conectar-se a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipo de arquivo desconhecido '{{file_type}}', mas aceitando e tratando como texto simples",
 	"Update and Copy Link": "Atualizar e Copiar Link",
 	"Update password": "Atualizar senha",
 	"Upload a GGUF model": "Carregar um modelo GGUF",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "Progresso do Carregamento",
 	"URL Mode": "Modo de URL",
 	"Use '#' in the prompt input to load and select your documents.": "Use '#' na entrada do prompt para carregar e selecionar seus documentos.",
@@ -502,13 +502,13 @@
 	"variable": "variável",
 	"variable to have them replaced with clipboard content.": "variável para que sejam substituídos pelo conteúdo da área de transferência.",
 	"Version": "Versão",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Aviso: Se você atualizar ou alterar seu modelo de incorporação, você precisará reimportar todos os documentos.",
 	"Web": "Web",
 	"Web Loader Settings": "Configurações do Carregador da Web",
 	"Web Params": "Parâmetros da Web",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "URL do Webhook",
 	"WebUI Add-ons": "Complementos WebUI",
 	"WebUI Settings": "Configurações WebUI",
@@ -521,7 +521,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escreva um resumo em 50 palavras que resuma [tópico ou palavra-chave].",
 	"Yesterday": "Ontem",
 	"You": "Você",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "Você não tem conversas arquivadas.",
 	"You have shared this chat": "Você compartilhou esta conversa",
 	"You're a helpful assistant.": "Você é um assistente útil.",
