--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(бета)",
 	"(e.g. `sh webui.sh --api`)": "(нпр. `sh webui.sh --api`)",
 	"(latest)": "(најновије)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô-đun }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở",
 	"{{modelName}} is thinking...": "{{modelName}} размишља...",
 	"{{user}}'s Chats": "Ћаскања корисника {{user}}",
 	"{{webUIName}} Backend Required": "Захтева се {{webUIName}} позадинац",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "корисник",
 	"About": "О нама",
 	"Account": "Налог",
 	"Accurate information": "Прецизне информације",
 	"Add": "Додај",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "Додај кратак наслов за овај упит",
 	"Add a tag": "Додај ознаку",
 	"Add custom prompt": "Додај прилагођен упит",
@@ -31,7 +31,7 @@
 	"Admin Panel": "Админ табла",
 	"Admin Settings": "Админ подешавања",
 	"Advanced Parameters": "Напредни параметри",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "сви",
 	"All Documents": "Сви документи",
 	"All Users": "Сви корисници",
@@ -48,7 +48,7 @@
 	"API keys": "API кључеви",
 	"April": "Април",
 	"Archive": "Архива",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả Tin nhắn Đã Lưu trữ",
 	"Archived Chats": "Архивирана ћаскања",
 	"are allowed - Activate this command by typing": "су дозвољени - Покрените ову наредбу уношењем",
 	"Are you sure?": "Да ли сте сигурни?",
@@ -63,14 +63,14 @@
 	"available!": "доступно!",
 	"Back": "Назад",
 	"Bad Response": "Лош одговор",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "пре",
 	"Being lazy": "Бити лењ",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Заобиђи SSL потврђивање за веб странице",
 	"Cancel": "Откажи",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "Промени лозинку",
 	"Chat": "Ћаскање",
 	"Chat Bubble UI": "Интерфејс балона ћаскања",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Кликните овде да изаберете документе.",
 	"click here.": "кликните овде.",
 	"Click on the user role button to change a user's role.": "Кликните на дугме за улогу корисника да промените улогу корисника.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Затвори",
 	"Collection": "Колекција",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "Основна адреса за ComfyUI",
 	"ComfyUI Base URL is required.": "Потребна је основна адреса за ComfyUI.",
 	"Command": "Наредба",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Потврди лозинку",
 	"Connections": "Везе",
 	"Content": "Садржај",
@@ -114,7 +114,7 @@
 	"Copy Link": "Копирај везу",
 	"Copying to clipboard was successful!": "Успешно копирање у оставу!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Направи сажету фразу од 3 до 5 речи као наслов за следећи упит, строго се придржавајући ограничења од 3-5 речи и избегавајући коришћење речи „наслов“:",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "Направи налог",
 	"Create new key": "Направи нови кључ",
 	"Create new secret key": "Направи нови тајни кључ",
@@ -123,7 +123,7 @@
 	"Current Model": "Тренутни модел",
 	"Current Password": "Тренутна лозинка",
 	"Custom": "Прилагођено",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình cho một mục đích cụ thể.",
 	"Dark": "Тамна",
 	"Database": "База података",
 	"December": "Децембар",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "Подразумевано (Automatic1111)",
 	"Default (SentenceTransformers)": "Подразумевано (SentenceTransformers)",
 	"Default (Web API)": "Подразумевано (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "Подразумевани модел ажуриран",
 	"Default Prompt Suggestions": "Подразумевани предлози упита",
 	"Default User Role": "Подразумевана улога корисника",
 	"delete": "обриши",
 	"Delete": "Обриши",
 	"Delete a model": "Обриши модел",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Обриши ћаскање",
 	"Delete Chat": "Обриши ћаскање",
 	"delete this link": "обриши ову везу",
 	"Delete User": "Обриши корисника",
 	"Deleted {{deleteModelTag}}": "Обрисано {{deleteModelTag}}",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Xóa {{name}}",
 	"Description": "Опис",
 	"Didn't fully follow instructions": "Упутства нису праћена у потпуности",
 	"Disabled": "Онемогућено",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "Откриј упит",
 	"Discover, download, and explore custom prompts": "Откријте, преузмите и истражите прилагођене упите",
 	"Discover, download, and explore model presets": "Откријте, преузмите и истражите образце модела",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Мотор модела уградње",
 	"Embedding model set to \"{{embedding_model}}\"": "Модел уградње подешен на \"{{embedding_model}}\"",
 	"Enable Chat History": "Омогући историју ћаскања",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Омогући нове пријаве",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Омогућено",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Уверите се да ваша CSV датотека укључује 4 колоне у овом редоследу: Име, Е-пошта, Лозинка, Улога.",
 	"Enter {{role}} message here": "Унесите {{role}} поруку овде",
 	"Enter a detail about yourself for your LLMs to recall": "Унесите детаље за себе да ће LLMs преузимати",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Унесите преклапање делова",
 	"Enter Chunk Size": "Унесите величину дела",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập mã API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "Унесите величину слике (нпр. 512x512)",
 	"Enter language codes": "Унесите кодове језика",
 	"Enter model tag (e.g. {{modelTag}})": "Унесите ознаку модела (нпр. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Унесите број корака (нпр. 50)",
 	"Enter Score": "Унесите резултат",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập khóa API Serper",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Унесите секвенцу заустављања",
 	"Enter Top K": "Унесите Топ К",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Унесите адресу (нпр. http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "Унесите ваше име и презиме",
 	"Enter Your Password": "Унесите вашу лозинку",
 	"Enter Your Role": "Унесите вашу улогу",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Експериментално",
 	"Export All Chats (All Users)": "Извези сва ћаскања (сви корисници)",
 	"Export Chats": "Извези ћаскања",
 	"Export Documents Mapping": "Извези мапирање докумената",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "Извези упите",
 	"Failed to create API Key.": "Неуспешно стварање API кључа.",
 	"Failed to read clipboard contents": "Неуспешно читање садржаја оставе",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Усредсредите унос ћаскања",
 	"Followed instructions perfectly": "Упутства су савршено праћена",
 	"Format your variables using square brackets like this:": "Форматирајте ваше променљиве користећи угластe заграде овако:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "Режим целог екрана",
 	"General": "Опште",
 	"General Settings": "Општа подешавања",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Информације о стварању",
 	"Good Response": "Добар одговор",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "нема разговора.",
 	"Hello, {{name}}": "Здраво, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "Слике",
 	"Import Chats": "Увези ћаскања",
 	"Import Documents Mapping": "Увези мапирање докумената",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "Увези упите",
 	"Include `--api` flag when running stable-diffusion-webui": "Укључи `--api` заставицу при покретању stable-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Унеси наредбе",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Изглед",
 	"Invalid Tag": "Неисправна ознака",
 	"January": "Јануар",
 	"join our Discord for help.": "придружите се нашем Дискорду за помоћ.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "Јул",
 	"June": "Јун",
 	"JWT Expiration": "Истек JWT-а",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "Уверите се да их затворите са",
 	"Manage Models": "Управљај моделима",
 	"Manage Ollama Models": "Управљај Ollama моделима",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "Март",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Највише 3 модела могу бити преузета истовремено. Покушајте поново касније.",
 	"May": "Мај",
 	"Memories accessible by LLMs will be shown here.": "Памћења које ће бити појављена од овог LLM-а ће бити приказана овде.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "Модел „{{modelName}}“ је успешно преузет.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "Модел „{{modelTag}}“ је већ у реду за преузимање.",
 	"Model {{modelId}} not found": "Модел {{modelId}} није пронађен",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Model {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Откривена путања система датотека модела. За ажурирање је потребан кратак назив модела, не може се наставити.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "Модел није изабран",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "Бели списак модела",
 	"Model(s) Whitelisted": "Модел(и) на белом списку",
 	"Modelfile Content": "Садржај модел-датотеке",
@@ -300,13 +300,13 @@
 	"More": "Више",
 	"Name": "Име",
 	"Name Tag": "Назив ознаке",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "Ново ћаскање",
 	"New Password": "Нова лозинка",
 	"No results found": "Нема резултата",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra.",
 	"No source available": "Нема доступног извора",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "Није чињенично тачно",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Напомена: ако подесите најмањи резултат, претрага ће вратити само документе са резултатом већим или једнаким најмањем резултату.",
 	"Notifications": "Обавештења",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "У реду, хајде да кренемо!",
 	"OLED Dark": "OLED тамна",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Издање Ollama-е",
 	"On": "Укључено",
 	"Only": "Само",
@@ -341,8 +341,8 @@
 	"pending": "на чекању",
 	"Permission denied when accessing microphone: {{error}}": "Приступ микрофону је одбијен: {{error}}",
 	"Personalization": "Прилагођавање",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Nhập liệu",
+	"Pipelines Valves": "Công tắc và đường ống",
 	"Plain text (.txt)": "Обичан текст (.txt)",
 	"Playground": "Игралиште",
 	"Positive attitude": "Позитиван став",
@@ -387,33 +387,33 @@
 	"Scan for documents from {{path}}": "Скенирај документе из {{path}}",
 	"Search": "Претражи",
 	"Search a model": "Претражи модел",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "Претражи документе",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Претражи упите",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_few": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_few": "Tìm kiếm trên {{count}} trang web (nhiều hơn)",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Погледај readme.md за упутства",
 	"See what's new": "Погледај шта је ново",
 	"Seed": "Семе",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "Изабери режим",
 	"Select a model": "Изабери модел",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường ống (pipeline)",
+	"Select a pipeline url": "Chọn một URL đường ống (pipeline)",
 	"Select an Ollama instance": "Изабери Ollama инстанцу",
 	"Select model": "Изабери модел",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mẫu được chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "Пошаљи",
 	"Send a Message": "Пошаљи поруку",
 	"Send message": "Пошаљи поруку",
 	"September": "Септембар",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Веза са сервером потврђена",
 	"Set as default": "Подеси као подразумевано",
 	"Set Default Model": "Подеси као подразумевани модел",
@@ -422,7 +422,7 @@
 	"Set Model": "Подеси модел",
 	"Set reranking model (e.g. {{model}})": "Подеси модел поновног рангирања (нпр. {{model}})",
 	"Set Steps": "Подеси кораке",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt mô hình nhiệm vụ",
 	"Set Voice": "Подеси глас",
 	"Settings": "Подешавања",
 	"Settings saved successfully!": "Подешавања успешно сачувана!",
@@ -481,14 +481,14 @@
 	"Top P": "Топ П",
 	"Trouble accessing Ollama?": "Проблеми са приступом Ollama-и?",
 	"TTS Settings": "TTS подешавања",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Унесите Hugging Face Resolve (Download) адресу",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Упс! Дошло је до проблема при повезивању са {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Непознат тип датотеке '{{file_type}}', али прихваћен и третиран као обичан текст",
 	"Update and Copy Link": "Ажурирај и копирај везу",
 	"Update password": "Ажурирај лозинку",
 	"Upload a GGUF model": "Отпреми GGUF модел",
-	"Upload Files": "",
+	"Upload Files": "Tải tệp lên",
 	"Upload Progress": "Напредак отпремања",
 	"URL Mode": "Режим адресе",
 	"Use '#' in the prompt input to load and select your documents.": "Користи '#' у уносу упита да учитате и изаберете ваше документе.",
@@ -502,13 +502,13 @@
 	"variable": "променљива",
 	"variable to have them replaced with clipboard content.": "променљива за замену са садржајем оставе.",
 	"Version": "Издање",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Упозорење: ако ажурирате или промените ваш модел уградње, мораћете поново да увезете све документе.",
 	"Web": "Веб",
 	"Web Loader Settings": "Подешавања веб учитавача",
 	"Web Params": "Веб параметри",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Адреса веб-куке",
 	"WebUI Add-ons": "Додаци веб интерфејса",
 	"WebUI Settings": "Подешавања веб интерфејса",
@@ -521,7 +521,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите сажетак у 50 речи који резимира [тему или кључну реч].",
 	"Yesterday": "Јуче",
 	"You": "Ти",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "Немате архивиране разговоре.",
 	"You have shared this chat": "Поделили сте ово ћаскање",
 	"You're a helpful assistant.": "Ти си користан помоћник.",
