--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -3,19 +3,19 @@
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api`)": "(t.ex. `sh webui.sh --api`)",
 	"(latest)": "(senaste)",
-	"{{ models }}": "",
-	"{{ owner }}: You cannot delete a base model": "",
+	"{{ models }}": "{{ mô hình }}",
+	"{{ owner }}: You cannot delete a base model": "{{ chủ sở hữu }}: Bạn không thể xóa một mô hình cơ sở",
 	"{{modelName}} is thinking...": "{{modelName}} tänker...",
 	"{{user}}'s Chats": "{{user}}s Chats",
 	"{{webUIName}} Backend Required": "{{webUIName}} Backend krävs",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Mô hình nhiệm vụ được sử dụng khi thực hiện các tác vụ như tạo tiêu đề cho cuộc trò chuyện và truy vấn tìm kiếm trên web.",
 	"a user": "en användare",
 	"About": "Om",
 	"Account": "Konto",
 	"Accurate information": "Exakt information",
 	"Add": "Lägg till",
-	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a model id": "Thêm mã mô hình",
+	"Add a short description about what this model does": "Thêm một mô tả ngắn về chức năng của mô hình này.",
 	"Add a short title for this prompt": "Lägg till en kort titel för denna prompt",
 	"Add a tag": "Lägg till en tagg",
 	"Add custom prompt": "Lägg till en anpassad prompt",
@@ -31,7 +31,7 @@
 	"Admin Panel": "Administrationspanel",
 	"Admin Settings": "Administratörsinställningar",
 	"Advanced Parameters": "Avancerade parametrar",
-	"Advanced Params": "",
+	"Advanced Params": "Tham số tiên tiến",
 	"all": "alla",
 	"All Documents": "Alla dokument",
 	"All Users": "Alla användare",
@@ -48,7 +48,7 @@
 	"API keys": "API-nycklar",
 	"April": "April",
 	"Archive": "Arkiv",
-	"Archive All Chats": "",
+	"Archive All Chats": "Tất cả Tin nhắn đều được Lưu trữ.",
 	"Archived Chats": "Arkiverade chattar",
 	"are allowed - Activate this command by typing": "är tillåtna - Aktivera detta kommando genom att skriva",
 	"Are you sure?": "Är du säker?",
@@ -63,14 +63,14 @@
 	"available!": "tillgänglig!",
 	"Back": "Tillbaka",
 	"Bad Response": "Felaktig respons",
-	"Banners": "",
-	"Base Model (From)": "",
+	"Banners": "Bannhiers",
+	"Base Model (From)": "Model cơ sở (Từ)",
 	"before": "før",
 	"Being lazy": "Lägg till",
-	"Brave Search API Key": "",
+	"Brave Search API Key": "Mã API Tìm kiếm Daring",
 	"Bypass SSL verification for Websites": "Kringgå SSL-verifiering för webbplatser",
 	"Cancel": "Avbryt",
-	"Capabilities": "",
+	"Capabilities": "Tính năng",
 	"Change Password": "Ändra lösenord",
 	"Chat": "Chatt",
 	"Chat Bubble UI": "Chatbubblar UI",
@@ -93,14 +93,14 @@
 	"Click here to select documents.": "Klicka här för att välja dokument.",
 	"click here.": "klicka här.",
 	"Click on the user role button to change a user's role.": "Klicka på knappen för användarroll för att ändra en användares roll.",
-	"Clone": "",
+	"Clone": "Tự động sao chép",
 	"Close": "Stäng",
 	"Collection": "Samling",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI Base URL",
 	"ComfyUI Base URL is required.": "ComfyUI Base URL krävs.",
 	"Command": "Kommando",
-	"Concurrent Requests": "",
+	"Concurrent Requests": "Yêu cầu đồng thời",
 	"Confirm Password": "Bekräfta lösenord",
 	"Connections": "Anslutningar",
 	"Content": "Innehåll",
@@ -114,7 +114,7 @@
 	"Copy Link": "Kopiera länk",
 	"Copying to clipboard was successful!": "Kopiering till urklipp lyckades!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Skapa en kort, 3-5 ords fras som rubrik för följande fråga, strikt följa 3-5 ordsgränsen och undvika användning av ordet 'titel':",
-	"Create a model": "",
+	"Create a model": "Tạo một mô hình",
 	"Create Account": "Skapa konto",
 	"Create new key": "Skapa ny nyckel",
 	"Create new secret key": "Skapa ny hemlig nyckel",
@@ -123,7 +123,7 @@
 	"Current Model": "Aktuell modell",
 	"Current Password": "Nuvarande lösenord",
 	"Custom": "Anpassad",
-	"Customize models for a specific purpose": "",
+	"Customize models for a specific purpose": "Tùy chỉnh mô hình để phục vụ một mục đích cụ thể.",
 	"Dark": "Mörk",
 	"Database": "Databas",
 	"December": "December",
@@ -131,24 +131,24 @@
 	"Default (Automatic1111)": "Standard (Automatic1111)",
 	"Default (SentenceTransformers)": "Standard (SentenceTransformers)",
 	"Default (Web API)": "Standard (Web API)",
-	"Default Model": "",
+	"Default Model": "Mẫu mặc định",
 	"Default model updated": "Standardmodell uppdaterad",
 	"Default Prompt Suggestions": "Standardpromptförslag",
 	"Default User Role": "Standardanvändarroll",
 	"delete": "radera",
 	"Delete": "Radera",
 	"Delete a model": "Ta bort en modell",
-	"Delete All Chats": "",
+	"Delete All Chats": "Xóa tất cả các cuộc trò chuyện",
 	"Delete chat": "Radera chatt",
 	"Delete Chat": "Radera chatt",
 	"delete this link": "radera denna länk",
 	"Delete User": "Radera användare",
 	"Deleted {{deleteModelTag}}": "Raderad {{deleteModelTag}}",
-	"Deleted {{name}}": "",
+	"Deleted {{name}}": "Xóa {{name}}",
 	"Description": "Beskrivning",
 	"Didn't fully follow instructions": "Följde inte instruktionerna",
 	"Disabled": "Inaktiverad",
-	"Discover a model": "",
+	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "Upptäck en prompt",
 	"Discover, download, and explore custom prompts": "Upptäck, ladda ner och utforska anpassade prompts",
 	"Discover, download, and explore model presets": "Upptäck, ladda ner och utforska modellförinställningar",
@@ -173,27 +173,27 @@
 	"Embedding Model Engine": "Embeddingsmodellmotor",
 	"Embedding model set to \"{{embedding_model}}\"": "Embeddingsmodell inställd på \"{{embedding_model}}\"",
 	"Enable Chat History": "Aktivera chatthistorik",
-	"Enable Community Sharing": "",
+	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
 	"Enable New Sign Ups": "Aktivera nya registreringar",
-	"Enable Web Search": "",
+	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "Aktiverad",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Se till att din CSV-fil innehåller fyra kolumner i denna ordning: Namn, E-post, Lösenord, Roll.",
 	"Enter {{role}} message here": "Skriv {{role}} meddelande här",
 	"Enter a detail about yourself for your LLMs to recall": "Skriv en detalj om dig själv för att dina LLMs ska komma ihåg",
-	"Enter Brave Search API Key": "",
+	"Enter Brave Search API Key": "Nhập khóa API của Brave Search",
 	"Enter Chunk Overlap": "Ange Chunk-överlappning",
 	"Enter Chunk Size": "Ange Chunk-storlek",
-	"Enter Github Raw URL": "",
-	"Enter Google PSE API Key": "",
-	"Enter Google PSE Engine Id": "",
+	"Enter Github Raw URL": "Nhập URL Github Raw",
+	"Enter Google PSE API Key": "Nhập khóa API PSE của Google",
+	"Enter Google PSE Engine Id": "Nhập mã Google PSE Engine Id vào đây.",
 	"Enter Image Size (e.g. 512x512)": "Ange bildstorlek (t.ex. 512x512)",
 	"Enter language codes": "Skriv språkkoder",
 	"Enter model tag (e.g. {{modelTag}})": "Ange modelltagg (t.ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Ange antal steg (t.ex. 50)",
 	"Enter Score": "Ange poäng",
-	"Enter Searxng Query URL": "",
-	"Enter Serper API Key": "",
-	"Enter Serpstack API Key": "",
+	"Enter Searxng Query URL": "Nhập URL yêu cầu tìm kiếm Searxng",
+	"Enter Serper API Key": "Nhập khóa API Serper",
+	"Enter Serpstack API Key": "Nhập khóa API Serpstack",
 	"Enter stop sequence": "Ange stoppsekvens",
 	"Enter Top K": "Ange Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Ange URL (t.ex. http://127.0.0.1:7860/)",
@@ -202,12 +202,12 @@
 	"Enter Your Full Name": "Ange ditt fullständiga namn",
 	"Enter Your Password": "Ange ditt lösenord",
 	"Enter Your Role": "Ange din roll",
-	"Error": "",
+	"Error": "Lỗi",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Exportera alla chattar (alla användare)",
 	"Export Chats": "Exportera chattar",
 	"Export Documents Mapping": "Exportera dokumentmappning",
-	"Export Models": "",
+	"Export Models": "Xuất bản mô hình",
 	"Export Prompts": "Exportera prompts",
 	"Failed to create API Key.": "Misslyckades med att skapa API-nyckel.",
 	"Failed to read clipboard contents": "Misslyckades med att läsa urklippsinnehåll",
@@ -220,15 +220,15 @@
 	"Focus chat input": "Fokusera chattindata",
 	"Followed instructions perfectly": "Följde instruktionerna perfekt",
 	"Format your variables using square brackets like this:": "Formatera dina variabler med hakparenteser så här:",
-	"Frequency Penalty": "",
+	"Frequency Penalty": "Chi phí tần suất",
 	"Full Screen Mode": "Helskärmsläge",
 	"General": "Allmän",
 	"General Settings": "Allmänna inställningar",
-	"Generating search query": "",
+	"Generating search query": "Tạo truy vấn tìm kiếm",
 	"Generation Info": "Generasjon Info",
 	"Good Response": "Bra svar",
-	"Google PSE API Key": "",
-	"Google PSE Engine Id": "",
+	"Google PSE API Key": "Khóa API PSE của Google",
+	"Google PSE Engine Id": "Máy chủ Google PSE Engine Id",
 	"h:mm a": "h:mm a",
 	"has no conversations.": "har ingen samtaler.",
 	"Hello, {{name}}": "Hej, {{name}}",
@@ -242,18 +242,18 @@
 	"Images": "Bilder",
 	"Import Chats": "Importera chattar",
 	"Import Documents Mapping": "Importera dokumentmappning",
-	"Import Models": "",
+	"Import Models": "Nhập mô hình",
 	"Import Prompts": "Importera prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inkludera `--api`-flagga när du kör stabil-diffusion-webui",
-	"Info": "",
+	"Info": "Thông tin",
 	"Input commands": "Indatakommandon",
-	"Install from Github URL": "",
+	"Install from Github URL": "Cài đặt từ URL Github",
 	"Interface": "Gränssnitt",
 	"Invalid Tag": "Ogiltig tagg",
 	"January": "januar",
 	"join our Discord for help.": "gå med i vår Discord för hjälp.",
 	"JSON": "JSON",
-	"JSON Preview": "",
+	"JSON Preview": "Xem trước JSON",
 	"July": "juli",
 	"June": "juni",
 	"JWT Expiration": "JWT-utgång",
@@ -270,9 +270,9 @@
 	"Make sure to enclose them with": "Se till att bifoga dem med",
 	"Manage Models": "Hantera modeller",
 	"Manage Ollama Models": "Hantera Ollama-modeller",
-	"Manage Pipelines": "",
+	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "mars",
-	"Max Tokens (num_predict)": "",
+	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Högst 3 modeller kan laddas ner samtidigt. Vänligen försök igen senare.",
 	"May": "mai",
 	"Memories accessible by LLMs will be shown here.": "Minnen som kan komma ihåg av LLM:er kommer att visas här.",
@@ -287,12 +287,12 @@
 	"Model '{{modelName}}' has been successfully downloaded.": "Modellen '{{modelName}}' har laddats ner framgångsrikt.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "Modellen '{{modelTag}}' är redan i kö för nedladdning.",
 	"Model {{modelId}} not found": "Modell {{modelId}} hittades inte",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
+	"Model {{modelName}} is not vision capable": "Modelo {{modelName}} không có khả năng nhận biết hình ảnh.",
+	"Model {{name}} is now {{status}}": "Model {{name}} hiện tại là {{status}}",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Modellens filsystemväg upptäckt. Modellens kortnamn krävs för uppdatering, kan inte fortsätta.",
-	"Model ID": "",
+	"Model ID": "Mã mô hình",
 	"Model not selected": "Modell inte vald",
-	"Model Params": "",
+	"Model Params": "Các Tham số Model",
 	"Model Whitelisting": "Modellens vitlista",
 	"Model(s) Whitelisted": "Modell(er) vitlistade",
 	"Modelfile Content": "Modelfilens innehåll",
@@ -300,13 +300,13 @@
 	"More": "Mer",
 	"Name": "Namn",
 	"Name Tag": "Namntag",
-	"Name your model": "",
+	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "Ny chatt",
 	"New Password": "Nytt lösenord",
 	"No results found": "Inga resultat hittades",
-	"No search query generated": "",
+	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "Ingen tilgjengelig kilde",
-	"None": "",
+	"None": "Không có gì.",
 	"Not factually correct": "Inte faktiskt korrekt",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Merk: Hvis du angir en minimumspoengsum, returnerer søket bare dokumenter med en poengsum som er større enn eller lik minimumspoengsummen.",
 	"Notifications": "Notifikationer",
@@ -316,7 +316,7 @@
 	"Okay, Let's Go!": "Okej, nu kör vi!",
 	"OLED Dark": "OLED mörkt",
 	"Ollama": "Ollama",
-	"Ollama API": "",
+	"Ollama API": "API Ollama",
 	"Ollama Version": "Ollama-version",
 	"On": "På",
 	"Only": "Endast",
@@ -341,8 +341,8 @@
 	"pending": "väntande",
 	"Permission denied when accessing microphone: {{error}}": "Tillstånd nekades vid åtkomst till mikrofon: {{error}}",
 	"Personalization": "Personalisering",
-	"Pipelines": "",
-	"Pipelines Valves": "",
+	"Pipelines": "Hậu trình",
+	"Pipelines Valves": "Công tắc đường truyền",
 	"Plain text (.txt)": "Rå text (.txt)",
 	"Playground": "Lekplats",
 	"Positive attitude": "Positivt humör",
@@ -387,32 +387,32 @@
 	"Scan for documents from {{path}}": "Skanna efter dokument från {{path}}",
 	"Search": "Sök",
 	"Search a model": "Sök efter en modell",
-	"Search Chats": "",
+	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "Sök dokument",
-	"Search Models": "",
+	"Search Models": "Tìm kiếm mô hình",
 	"Search Prompts": "Sök promptar",
-	"Search Result Count": "",
-	"Searched {{count}} sites_one": "",
-	"Searched {{count}} sites_other": "",
-	"Searching the web for '{{searchQuery}}'": "",
-	"Searxng Query URL": "",
+	"Search Result Count": "Số kết quả tìm kiếm",
+	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
+	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
+	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên web cho '{{searchQuery}}'",
+	"Searxng Query URL": "Tìm kiếm URL truy vấn",
 	"See readme.md for instructions": "Se readme.md för instruktioner",
 	"See what's new": "Se vad som är nytt",
 	"Seed": "Seed",
-	"Select a base model": "",
+	"Select a base model": "Chọn một mẫu cơ sở",
 	"Select a mode": "Välj ett läge",
 	"Select a model": "Välj en modell",
-	"Select a pipeline": "",
-	"Select a pipeline url": "",
+	"Select a pipeline": "Chọn một đường dẫn pipline",
+	"Select a pipeline url": "Chọn một URL pipeline",
 	"Select an Ollama instance": "Välj en Ollama-instans",
 	"Select model": "Välj en modell",
-	"Selected model(s) do not support image inputs": "",
+	"Selected model(s) do not support image inputs": "Danh mục mô hình đã chọn không hỗ trợ đầu vào hình ảnh.",
 	"Send": "Skicka",
 	"Send a Message": "Skicka ett meddelande",
 	"Send message": "Skicka meddelande",
 	"September": "september",
-	"Serper API Key": "",
-	"Serpstack API Key": "",
+	"Serper API Key": "Mã API Serper",
+	"Serpstack API Key": "Mã API Serpstack",
 	"Server connection verified": "Serveranslutning verifierad",
 	"Set as default": "Ange som standard",
 	"Set Default Model": "Ange standardmodell",
@@ -421,7 +421,7 @@
 	"Set Model": "Ställ in modell",
 	"Set reranking model (e.g. {{model}})": "Ställ in reranking modell (t.ex. {{model}})",
 	"Set Steps": "Ange steg",
-	"Set Task Model": "",
+	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "Ange röst",
 	"Settings": "Inställningar",
 	"Settings saved successfully!": "Inställningar sparades framgångsrikt!",
@@ -480,14 +480,14 @@
 	"Top P": "Topp P",
 	"Trouble accessing Ollama?": "Problem med att komma åt Ollama?",
 	"TTS Settings": "TTS-inställningar",
-	"Type": "",
+	"Type": "Nhập vào",
 	"Type Hugging Face Resolve (Download) URL": "Skriv Hugging Face Resolve (nedladdning) URL",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Oj då! Det uppstod ett problem med att ansluta till {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Okänd filtyp '{{file_type}}', men accepterar och behandlar som vanlig text",
 	"Update and Copy Link": "Uppdatera och kopiera länk",
 	"Update password": "Uppdatera lösenord",
 	"Upload a GGUF model": "Ladda upp en GGUF-modell",
-	"Upload Files": "",
+	"Upload Files": "Tải lên các tệp tin",
 	"Upload Progress": "Uppladdningsförlopp",
 	"URL Mode": "URL-läge",
 	"Use '#' in the prompt input to load and select your documents.": "Använd '#' i promptinmatningen för att ladda och välja dina dokument.",
@@ -501,13 +501,13 @@
 	"variable": "variabel",
 	"variable to have them replaced with clipboard content.": "variabel för att få dem ersatta med urklippsinnehåll.",
 	"Version": "Version",
-	"Warning": "",
+	"Warning": "Cảnh báo",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Varning: Om du uppdaterar eller ändrar din embedding modell måste du importera alla dokument igen.",
 	"Web": "Webb",
 	"Web Loader Settings": "Web Loader-inställningar",
 	"Web Params": "Web-parametrar",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Tìm kiếm trên Web",
+	"Web Search Engine": "Máy Tìm Kiếm Trang Web",
 	"Webhook URL": "Webhook-URL",
 	"WebUI Add-ons": "WebUI-tillägg",
 	"WebUI Settings": "WebUI-inställningar",
@@ -520,7 +520,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv en sammanfattning på 50 ord som sammanfattar [ämne eller nyckelord].",
 	"Yesterday": "Igenom",
 	"You": "du",
-	"You cannot clone a base model": "",
+	"You cannot clone a base model": "Bạn không thể sao chép một mô hình cơ sở.",
 	"You have no archived conversations.": "Du har inga arkiverade konversationer.",
 	"You have shared this chat": "Du har delat denna chatt",
 	"You're a helpful assistant.": "Du är en hjälpsam assistent.",
